CI images update

--- a/images/chieu-cay-dai-loan-vien-da14/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da14.html
 lastopen = 2024-06-09 22:14:06
 
 [search]
-lastsearch = 2024-07-29 05:46:41
+lastsearch = 2024-07-29 06:21:25
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -212,9 +212,9 @@ title = Tin tức & hoạt động - Công ty Điện lực Lâm Đồng
 url = https://pclamdong.evnspc.vn/CMS_Article?AID=ARTICLE13020561&MID=F02-MNU202105-00000046
 
 [shopee.vn]
-match = -60.7%%
-title = Chiếu trúc hạt được làm từ 100%% trúc kích cỡ 1.6m x 1.91m ...
-url = https://shopee.vn/Chiếu-trúc-hạt-được-làm-từ-100-trúc-kích-cỡ-1.6m-x-1.91m-nhàng-nhập-Đài-Loan-i.17226131.2659077859
+match = -17.9%%
+title = chiếu đài loan đại giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu đài loan đại
 
 [tiki.vn]
 match = 3.6%%
@@ -290,4 +290,19 @@ url = https://kcb.vn/upload/2005611/20210723//Bộ-Y-tế-200-Quy-trình-kỹ-th
 match = -14.3%%
 title = ĐẶC ĐIỂM LÂM SÀNG VÀ HÌNH ẢNH CHẤN THƢƠNG ...
 url = https://repository.vnu.edu.vn/bitstream/VNU_123/142988/1/16100017.pdf
+
+[vn.rti.org.tw]
+match = -60.7%%
+title = Cây vani thành minh tinh mới nổi của ngành nông nghiệp ...
+url = https://vn.rti.org.tw/news/view/id/2011463
+
+[kayla.com.vn]
+match = -71.4%%
+title = Bàng Đài Loan | Terminalia mantaly - Cây, hoa & đồ sân vườn ...
+url = https://kayla.com.vn/product/bang-dai-loan-terminalia-mantaly/
+
+[www.taiwan-panorama.com]
+match = -46.4%%
+title = Thông điệp đến từ Đất mẹ Đài Loan - Bảo tàng thổ nhưỡng ...
+url = https://www.taiwan-panorama.com/vi/Articles/Details?Guid=8fe4108f-61c9-4bd2-9cc7-a8fbd45155e9&CatId=10&postname=Thông điệp đến từ Đất mẹ-Đài Loan - Bảo tàng thổ nhưỡng thế giới
 
