--- a/images/chieu-cay-ht-14/config.ini
+++ b/images/chieu-cay-ht-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-ht-14.html
 lastopen = 2024-06-09 21:54:46
 
 [search]
-lastsearch = 2024-07-28 20:27:57
+lastsearch = 2024-07-29 06:20:22
 
 [www.diepxuan.com]
-match = -6.7%%
-title = Điệp Xuân Chiếu cây HT 160x200
-url = https://www.diepxuan.com/chieu-cay-ht-160x200.html
+match = -20.0%%
+title = Chiếu cây HT 150x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-cay-ht-150x190.html
 
 [shopee.vn]
-match = -40.0%%
-title = chiếu trúc tăm HT cao cấp 2mx2.2m
-url = https://shopee.vn/chiếu-trúc-tăm-HT-cao-cấp-2mx2.2m-i.68883759.22469028239
+match = -6.7%%
+title = chiếu trúc tăm hương trúc ht
+url = https://shopee.vn/chiếu-trúc-tăm-hương-trúc-ht-i.68883759.14478905056
 
 [www.htv.com.vn]
 match = -106.7%%
@@ -42,9 +42,9 @@ title = Đèn LED Spotlight Âm Trần 8091 - HT Max Light
 url = https://www.htlightlevel.vn/den-led-spotlight-am-tran-8091/
 
 [www.youtube.com]
-match = -213.3%%
-title = TÌNH YÊU ĐỊNH MỆNH - TẬP 14 (Lồng Tiếng) Trọn Bộ Siêu ...
-url = https://www.youtube.com/watch?v=EzzHMW9AhsA
+match = -246.7%%
+title = Dự báo thời tiết dài hạn từ ngày 29/07 đến ngày 04/08/2024 ...
+url = https://www.youtube.com/watch?v=X77NSTQ8HW4
 
 [dauthau.asia]
 match = -240.0%%
