--- a/images/bo-ga-goi-chun-xoa-14/config.ini
+++ b/images/bo-ga-goi-chun-xoa-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-14.html
 lastopen = 2024-06-09 23:12:23
 
 [search]
-lastsearch = 2024-07-29 00:16:57
+lastsearch = 2024-07-29 06:12:30
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -92,9 +92,9 @@ title = Bộ Chăn Ga Gối Lụa Silk Thêu LSP-14
 url = https://suongtuyet.com/bo-chan-ga-goi-lua-silk-theu-lsp-14
 
 [khodem.vn]
-match = -85.7%%
-title = Bộ chăn ga gối chun chần Hanvico My Youth MY62 - Kho đệm
-url = https://khodem.vn/bo-chan-ga-goi-chun-chan-hanvico-my-youth-my62/
+match = -90.5%%
+title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương - Kho đệm
+url = https://khodem.vn/bo-chan-ga-goi-chun-chan-tencel-maris-kim-cuong/
 
 [mym.com.vn]
 match = 42.9%%
