--- a/images/chieu-dieu-hoa-cao-su-150x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-150x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 lastopen = 2024-07-01 03:08:57
 
 [search]
-lastsearch = 2024-07-29 00:43:52
+lastsearch = 2024-07-29 06:24:54
 
 [demxanh.com]
 match = 3.4%%
 title = [Hot] Bảng giá chiếu Điều Hoà mới nhất 2023
-url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html?srsltid=AfmBOorEJNCo4aEU3DH1GhoBJQbhhe65UWkM5twYvWwWYb4ma5Cl1mMT
+url = https://demxanh.com/bang-gia-chieu-dieu-hoa-moi-nhat-2019.html
 
 [entershopping.vn]
 match = -13.8%%
@@ -39,7 +39,7 @@ url = https://khodem.vn/chieu-dieu-hoa-cao-su-non/
 [www.diepxuan.com]
 match = 58.6%%
 title = Chiếu điều hòa cao su 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html?srsltid=AfmBOor1rTR-Ksoait96pE02a65PwFYz0papm9g_rlogEcUG768luViL
+url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-150x190.html
 
 [russo.vn]
 match = -20.7%%
