--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-07-29 05:33:16
+lastsearch = 2024-07-29 06:20:43
 
 [demxanh.com]
 match = -3.3%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
 url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
-match = 13.3%%
-title = chiếu điều hoà giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=chiếu điều hoà
+match = -6.7%%
+title = Chiếu điều hòa có mát không? Loại nào tránh nóng tốt nhất?
+url = https://shopee.vn/blog/chieu-dieu-co-mat-khong/
 
 [demviethome.vn]
 match = 26.7%%
