--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-07-29 02:11:13
+lastsearch = 2024-07-29 06:32:26
 
 [scholar.google.com]
 match = -43.8%%
@@ -108,13 +108,13 @@ url = http://hunglien.net/san-pham/chieu-lac/
 
 [primagold.com.vn]
 match = -231.2%%
-title = Giá vàng 9999 hôm nay tại 64 tỉnh 28/7/2024 | Bảng giá vàng
+title = Giá vàng 9999 hôm nay tại 64 tỉnh 29/7/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -212.5%%
-title = Đợi Chế Ra Lấy Giá Võng Tranh Thủ Ướp Cá Bủn Muối Xã Ớt ...
-url = https://www.youtube.com/watch?v=mscki_o4aGM
+match = -206.2%%
+title = Dư luận “dậy sóng” vì Chùa Cầu bớt cổ kính sau khi được ...
+url = https://www.youtube.com/watch?v=ZN_PgnWeCgI
 
 [books.google.com]
 match = -156.2%%
