--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-29 05:39:09
+lastsearch = 2024-07-29 06:28:12
 
 [shopee.vn]
-match = -37.5%%
-title = Chiếu mây điều hòa Lidaco loại dày cực mát cho ngày hè
-url = https://shopee.vn/Chiếu-mây-điều-hòa-Lidaco-loại-dày-cực-mát-cho-ngày-hè-i.352833469.4282665950
+match = -41.7%%
+title = Chiếu mây điều hòa các kích thước 1.5m-1.6m-1.8m-2.2x2m
+url = https://shopee.vn/Chiếu-mây-điều-hòa-các-kích-thước-1.5m-1.6m-1.8m-2.2x2m-i.26249437.338321510
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -17,9 +17,9 @@ title = Chiếu điều hòa có gối 15
 url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 
 [demxanh.com]
-match = -25.0%%
-title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
-url = https://demxanh.com/chieu-dieu-hoa.html
+match = 16.7%%
+title = Sử dụng chiếu điều hòa có tốt hay không?
+url = https://demxanh.com/su-dung-chieu-dieu-hoa-co-tot-hay-khong.html
 
 [goni.vn]
 match = 4.2%%
