--- a/images/chieu-lac-gam-16/config.ini
+++ b/images/chieu-lac-gam-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-16.html
 lastopen = 2024-06-09 23:10:09
 
 [search]
-lastsearch = 2024-07-29 04:37:25
+lastsearch = 2024-07-29 06:33:53
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -650,4 +650,9 @@ url = https://metruyen.me/truyen/chieu-tue/chuong-6
 match = -256.2%%
 title = Vụ 'cô gái lây hiv cho 16 người': Xử phạt người đăng tin sai sự ...
 url = https://bptv.vn/video/539/24174/vu-co-gai-lay-hiv-cho-16-nguoi-xu-phat-nguoi-dang-tin-sai-su-that-shorts
+
+[thethao247.vn]
+match = -100.0%%
+title = Lịch thi đấu LPL Mùa Hè 2024 LMHT mới nhất
+url = https://thethao247.vn/400-lich-thi-dau-lpl-mua-he-2024-lmht-moi-nhat-hom-nay-d277612.html
 
