--- a/images/chieu-nhua-thai-binh-08/config.ini
+++ b/images/chieu-nhua-thai-binh-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-08.html
 lastopen = 2024-06-09 23:16:13
 
 [search]
-lastsearch = 2024-07-29 05:44:59
+lastsearch = 2024-07-29 06:28:53
 
 [shopee.vn]
 match = -73.9%%
@@ -12,14 +12,14 @@ title = Chiếu Cói Trắng Loại Dầy Kích Thước 0.8,1m2,1m4,1m5, ...
 url = https://shopee.vn/Chiếu-Cói-Thái-Bình-Chiếu-Cói-Trắng-Loại-Dầy-Kích-Thước-0.8-1m2-1m4-1m5-1m6-1m8-2mx2m2-i.126028938.9967765201
 
 [m.facebook.com]
-match = -43.5%%
-title = Chiếu Cói Thái Bình,Chiếu Nhựa,Chiếu Trúc cao cấp
-url = https://m.facebook.com/p/Chiếu-Cói-Thái-BìnhChiếu-NhựaChiếu-Trúc-cao-cấp-100046868362224/?locale=fr_CA
+match = 8.7%%
+title = Xưởng chiếu nhựa Thái bình 2023 | Thai Binh
+url = https://m.facebook.com/CHIEUNHUAHATRANG/
 
 [tiki.vn]
-match = -47.8%%
-title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên - ...
-url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384250
+match = -21.7%%
+title = Chiếu nhựa thái bình 1m2,m5,1m6,1m8 mầu ngẫu nhiên
+url = https://tiki.vn/chieu-nhua-gap-gon-1m2-1m5-1m6-1m8-mau-ngau-nhien-hang-dep-p193384230.html?spid=193384238
 
 [trangvangvietnam.com]
 match = 21.7%%
