--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-29 05:43:39
+lastsearch = 2024-07-29 06:34:14
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -37,9 +37,9 @@ title = Faculty and Staff | Department of Kinesiology
 url = https://www.sjsu.edu/kinesiology/about-us/faculty-and-staff.php
 
 [profiles.ucsd.edu]
-match = -10.0%%
-title = Anders Dale - UCSD Profiles
-url = https://profiles.ucsd.edu/anders.dale
+match = -5.0%%
+title = Gary Vilke - UCSD Profiles
+url = https://profiles.ucsd.edu/gary.vilke
 
 [quicksearch.dla.mil]
 match = -185.7%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 11.1%%
-title = Marina Sirota, PhD
-url = https://profiles.ucsf.edu/marina.sirota
+match = -6.2%%
+title = Spencer Behr, MD
+url = https://profiles.ucsf.edu/spencer.behr
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -127,9 +127,9 @@ title = Bladder Cancer: Practice Essentials, Background, Anatomy
 url = https://emedicine.medscape.com/article/438262-overview
 
 [profiles.sc-ctsi.org]
-match = -5.0%%
-title = Paul Thompson - USC Profiles
-url = https://profiles.sc-ctsi.org/paul.thompson
+match = 0.0%%
+title = Mark Krailo - USC Profiles
+url = https://profiles.sc-ctsi.org/mark.krailo
 
 [asapdata.arc.nasa.gov]
 match = -95.0%%
