--- a/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
+++ b/images/bo-ga-chun-kymdan-160x200-tencel/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-kymdan-160x200-tencel.html
 lastopen = 2024-06-07 00:32:48
 
 [search]
-lastsearch = 2024-07-29 05:38:06
+lastsearch = 2024-07-29 06:56:52
 
 [www.kymdan.com]
 match = 4.2%%
@@ -29,7 +29,7 @@ url = https://yeshomebedding.com/bo-san-pham-everon-ept24036
 [www.lazada.vn]
 match = -15.6%%
 title = Bộ ga chun chần Kim Cương vải Tencel 1 màu kích thước ...
-url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-vai-tencel-1-mau-kich-thuoc-160x200-180x200cm-i2397238682.html?srsltid=AfmBOoovhw6f-CeP2ktwWJYDyY_6vH_MhIkSG5sRLhWtl6BgVHnU8yKA
+url = https://www.lazada.vn/products/bo-ga-chun-chan-kim-cuong-vai-tencel-1-mau-kich-thuoc-160x200-180x200cm-i2397238682.html
 
 [shopee.vn]
 match = -25.0%%
@@ -112,7 +112,7 @@ title = Bộ chăn ga gối Tencel Dreamtex DTF-004 - Nệm Tuan Thao
 url = https://everonthuduc.vn/san-pham/bo-chan-ga-goi-tencel-dreamtex-dtf-004/
 
 [khodem.vn]
-match = -28.1%%
-title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương - Kho đệm
+match = -3.1%%
+title = Bộ chăn ga gối chun chần Tencel Maris Kim Cương
 url = https://khodem.vn/bo-chan-ga-goi-chun-chan-tencel-maris-kim-cuong/
 
