--- a/images/bo-ga-goi-chun-chan-happy-16/config.ini
+++ b/images/bo-ga-goi-chun-chan-happy-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-chan-happy-16.html
 lastopen = 2024-06-06 16:51:08
 
 [search]
-lastsearch = 2024-07-28 17:33:52
+lastsearch = 2024-07-29 06:49:22
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = bộ ga chun poly giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=bộ ga chun poly
 
 [chandem.com.vn]
-match = 17.9%%
-title = Bộ chăn ga gối Happy Wedding Solid 84
-url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-solid-84/
+match = 21.4%%
+title = Bộ chăn ga gối Litter Girl Ctt112
+url = https://chandem.com.vn/san-pham/bo-chan-ga-goi-ctt112/
 
 [demxanh.com]
 match = 0.0%%
@@ -37,9 +37,9 @@ title = Bảng giá chăn ga gối đệm mới nhất
 url = https://thegioinem.com/bang-gia-chan-ga-goi-dem.html
 
 [happynest.vn]
-match = 10.7%%
-title = Bộ ga chun chần bốn mùa Happy Town EPC23048
-url = https://happynest.vn/shop/EBGCTBMEPC23048/bo-ga-chun-chan-bon-mua-happy-town-epc23048.html
+match = 50.0%%
+title = Bộ Ga chun chần EPM21071
+url = https://happynest.vn/shop/EPM21071GC/bo-ga-chun-chan-epm21071.html
 
 [chuyenhangviet.com]
 match = -25.0%%
