--- a/images/chan-5-kg-kq-song/config.ini
+++ b/images/chan-5-kg-kq-song/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-kg-kq-song.html
 lastopen = 2024-06-09 23:17:50
 
 [search]
-lastsearch = 2024-07-29 05:50:42
+lastsearch = 2024-07-29 06:51:46
 
 [en.wikipedia.org]
 match = -45.5%%
@@ -17,9 +17,9 @@ title = Yechan (xikers) - Kpop Wiki - Fandom
 url = https://kpop.fandom.com/wiki/Yechan_(xikers)
 
 [kprofiles.com]
-match = -76.5%%
-title = xikers Members Profile (Updated!)
-url = https://kprofiles.com/xikers-members-profile/
+match = -70.6%%
+title = ATEEZ Members Profile (Updated!)
+url = https://kprofiles.com/ateez-members-profile/
 
 [www.qsc.com]
 match = -188.2%%
@@ -34,7 +34,7 @@ url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC9317998/
 [books.google.com]
 match = -11.8%%
 title = Cumulated Index Medicus
-url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWFH1m1b&sig=ACfU3U0CIgvZ4ybka1W89MGgZIijbuBt2w&hl=en&sa=X&ved=2ahUKEwiry_SX6cqHAxVWKkQIHUimLJEQ6AF6BAgcEAM
+url = https://books.google.com/books?id=KlBiDKi_dngC&pg=PA5960&lpg=PA5960&dq=chan+5+kg+kq+song&source=bl&ots=BOWWFIWtZg&sig=ACfU3U0xqfDxTweDDdnbiA55HHTrTb13Mw&hl=en&sa=X&ved=2ahUKEwjagajr9sqHAxWDF1kFHY1fC-8Q6AF6BAgaEAM
 
 [www.ateezstoryline.com]
 match = 0.0%%
@@ -87,9 +87,9 @@ title = Sl.No. QUESTION
 url = https://swr.indianrailways.gov.in/uploads/files/1574064319246-GK-final.pdf
 
 [www.quora.com]
-match = -211.8%%
-title = Does JYP allow his artists to write down their own songs or ...
-url = https://www.quora.com/Does-JYP-allow-his-artists-to-write-down-their-own-songs-or-does-he-write-it-for-them-like-how-YG-writes-songs-for-Blackpink
+match = -176.5%%
+title = How much do you know about each member of the Korean ...
+url = https://www.quora.com/How-much-do-you-know-about-each-member-of-the-Korean-band-Stray-Kids-What-are-their-interests-hobbies-outside-of-music-Are-they-close-friends-in-real-life-as-well
 
 [msaniimusicgroup.org]
 match = 0.0%%
@@ -109,7 +109,7 @@ url = https://www.aasv.org/library/swineinfo/series_index.php?id=4
 [www.diepxuan.com]
 match = -5.9%%
 title = Chăn KQ sóng 5kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-kq-song-5kg.html?srsltid=AfmBOoq6zJ5yX1Y_Hilf8sB4RToUcT8OHzGbXQGIAIH6QfCFrRyuRZ9M
+url = https://www.diepxuan.com/chan-kq-song-5kg.html
 
 [www.kvaser.cn]
 match = -5.9%%
