--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-29 04:16:15
+lastsearch = 2024-07-29 06:57:34
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,9 +12,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = -21.7%%
-title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
-url = https://demxanh.com/chieu-truc-cao-bang.html
+match = -60.9%%
+title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOorrkxHsLEz5Yvo3OkA56nhAXwFime8isv0jiFNQCck1yDr4ml6S
 
 [chieutrucsaigon.com]
 match = -13.0%%
@@ -22,9 +22,9 @@ title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
 url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
 
 [shopee.vn]
-match = 17.4%%
-title = Chiếu cao bằng Việt Nam 1.2m x 1.95
-url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.1588526215
+match = -69.6%%
+title = Chiếu trúc Cao Bằng loại một, có 5 loại kích thước 1,2m ...
+url = https://shopee.vn/Chiếu-trúc-Cao-Bằng-loại-một-có-5-loại-kích-thước-1-2m-1m-0.9mvà-0.8m-i.17414239.2656259371
 
 [www.lazada.vn]
 match = 21.7%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOopdRL0blv4jLPS4FZf1kFgWTrBcDVnGw_ps3oT7z7-8zZ6LZt4d
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
