--- a/images/chieu-lac-soc-12/config.ini
+++ b/images/chieu-lac-soc-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-12.html
 lastopen = 2024-06-09 23:46:56
 
 [search]
-lastsearch = 2024-07-29 00:47:52
+lastsearch = 2024-07-29 06:44:13
 
 [shopee.vn]
 match = 25.0%%
@@ -84,7 +84,7 @@ url = https://baomoi.com/giu-nghe-det-chieu-truyen-thong-thu-xa-c48769346.epi
 [nhathuoclongchau.com.vn]
 match = -200.0%%
 title = Cách tăng chiều cao ở tuổi 12 đơn giản, dễ dàng ngay tại ...
-url = https://nhathuoclongchau.com.vn/bai-viet/cach-tang-chieu-cao-o-tuoi-12-don-gian-de-dang-ngay-tai-nha.html?srsltid=AfmBOorOinRRiZCHV0HcKwUqIn1AlLP6BcBnXxLODx3VAtxmTTOpPzmI
+url = https://nhathuoclongchau.com.vn/bai-viet/cach-tang-chieu-cao-o-tuoi-12-don-gian-de-dang-ngay-tai-nha.html
 
 [vietstock.vn]
 match = -231.2%%
