--- a/images/man-ren-12/config.ini
+++ b/images/man-ren-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-ren-12.html
 lastopen = 2024-06-07 00:50:53
 
 [search]
-lastsearch = 2024-07-29 01:25:44
+lastsearch = 2024-07-29 06:49:43
 
 [www.ncbi.nlm.nih.gov]
 match = -410.0%%
@@ -62,8 +62,8 @@ title = Conception Vessel 12, CV 12, Ren-12 - Acupuncture-points.org
 url = https://www.acupuncture-points.org/conception-vessel-12.html
 
 [www.youtube.com]
-match = -340.0%%
-title = Functions of Ren 12 (CV12, Zhongwan 中脘穴)
+match = -520.0%%
+title = Functions of Ren 12 (CV12, Zhongwan 中脘穴) - Acupuncture ...
 url = https://www.youtube.com/watch?v=W1LAqwFK9Rw
 
 [www.maciociaonline.com]
