--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-07-29 05:12:14
+lastsearch = 2024-07-29 07:00:19
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -142.9%%
-title = A critical pronouncing dictionary. With a suppl., by E. Smith
-url = https://books.google.com/books?id=cHoCAAAAQAAJ&pg=RA11-PA13&lpg=RA11-PA13&dq=nem+di+a+mon+9f+16+re&source=bl&ots=ubvle4ID5U&sig=ACfU3U18C6D5S2V1Y2r_BEkkf3aBLymZIw&hl=en&sa=X&ved=2ahUKEwiOqs_L4MqHAxVuv4kEHQ6aBE0Q6AF6BAgeEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCq4xpop&sig=ACfU3U1YFEaIIajD5hVFUe4P4T2M7U0l7Q&hl=en&sa=X&ved=2ahUKEwjOrOLf-MqHAxV-FVkFHZd3CWsQ6AF6BAgaEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -242,9 +242,9 @@ title = Marie Unna hereditary hypotrichosis
 url = https://www.orpha.net/en/disease/detail/444
 
 [nempacboston.org]
-match = -119.0%%
-title = Past Events from May 12, 2023 – August 3, 2023 – Page 5
-url = https://nempacboston.org/events/list/page/5/?eventDisplay=past
+match = -47.6%%
+title = Events from June 18, 2022 – June 16, 2023
+url = https://nempacboston.org/events/list/?tribe-bar-date=2021-07-21
 
 [www.jcog.com.tr]
 match = -142.9%%
@@ -252,9 +252,9 @@ title = Idarubicine Treatment of Acute Myeloblastic Leukemia During ...
 url = https://www.jcog.com.tr/pdf/?pdf=d8ef007c2333e3bc22fd94ac0c236dcb
 
 [www.formatbiz.it]
-match = -95.2%%
-title = NEM Dubrovnik 2023, Day 2: record number of decision ...
-url = https://www.formatbiz.it/dettNews.aspx?id=10170
+match = -76.2%%
+title = Nem Dubrovnik 2024 confirms a record of partecipants
+url = https://www.formatbiz.it/dettNews.aspx?id=11256
 
 [yro.slashdot.org]
 match = -114.3%%
