--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-07-29 02:30:51
+lastsearch = 2024-07-29 06:45:14
 
 [demxanh.com]
 match = -22.7%%
-title = Thảm trải giường cao su non màu xanh nhạt
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-xanh-nhat.html
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html?srsltid=AfmBOorlIHnABhPLo7O-LfyNZXj3kvyHPhYptx3i3REhhl-qGERk3fcM
 
 [demre.com.vn]
 match = 18.2%%
-title = Thảm ghế thảm giường - Trang 5
-url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=price-desc&page=5
+title = Thảm ghế thảm giường - Trang 4
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [decoviet.vn]
 match = 22.2%%
@@ -44,7 +44,7 @@ url = https://flexhouse.vn/tham-trai-san-phong-khach-tre-trung-nang-dong-tbd2582
 [www.diepxuan.com]
 match = 36.4%%
 title = Thảm giường nỉ 140x190 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-140x190.html
+url = https://www.diepxuan.com/tham-giuong-ni-140x190.html?srsltid=AfmBOop61iCHzs7NJIANA5Zm4myW8yVTK5eDZKVm4Wfam1asSnSQpW8z
 
 [www.lazada.vn]
 match = -77.3%%
@@ -52,9 +52,9 @@ title = Thảm Trải Sofa Giá Tốt T06/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/tham-trai-sofa/
 
 [tiki.vn]
-match = -59.1%%
-title = Thảm trải chân giường hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=thảm trải chân giường
+match = -90.9%%
+title = Thảm trải sàn phòng khách 2m x 2m hàng chính hãng, ...
+url = https://tiki.vn/search?q=thảm trải sàn phòng khách 2m x 2m
 
 [cafeland.vn]
 match = -109.1%%
