--- a/images/tham-giuong-ii-160x200/config.ini
+++ b/images/tham-giuong-ii-160x200/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-160x200.html
 lastopen = 2024-06-17 21:09:12
 
 [search]
-lastsearch = 2024-07-29 05:37:45
+lastsearch = 2024-07-29 06:48:19
 
 [www.diepxuan.com]
 match = 40.9%%
 title = Thảm giường nỉ 160x200 - Điệp Xuân
-url = https://www.diepxuan.com/tham-giuong-ni-160x200.html
+url = https://www.diepxuan.com/tham-giuong-ni-160x200.html?srsltid=AfmBOoptk_FPFLJkDy4RnAIs7j2KJy7TpdC2UncMzqQynfo6lPH-9jzy
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html?srsltid=AfmBOor6nXSa2PBbumReEm7PeYVTT9X1jBsWD9AsZkeRLv9RpQr8c96x
 
 [www.lazada.vn]
 match = -113.6%%
 title = Ga chống thấm trải giường cotton 2 lớp loại tốt kích thước ...
-url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html
+url = https://www.lazada.vn/products/ga-chong-tham-trai-giuong-cotton-2-lop-loai-tot-kich-thuoc-1m6-va-1m8-x-2m-sieu-mem-sieu-dep-boc-nem-i942722664.html?srsltid=AfmBOooSotJNLjP8Tpd41mX1du6zAhABKbug5U_oiKWXx0YkMW0n4AEU
 
 [www.sendo.vn]
 match = 4.5%%
