--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-07-28 21:14:40
+lastsearch = 2024-07-29 08:00:49
 
 [everon.com.vn]
 match = 14.8%%
 title = Bộ Chăn Ga Everon EPM 22063
-url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/
+url = https://everon.com.vn/bo-chan-ga-everon-epm-22063/?srsltid=AfmBOoot6pk6I2LbhqoPrmAH3dESxaFpZKenKmLadne5XZPDNdcwIWLD
 
 [everon.online]
-match = -5.0%%
-title = [VIDEO] Bộ Chăn Ga Everon EPM22063 Chất Liệu Modal Cao ...
-url = https://everon.online/blogs/video/bo-everon-epm22063-co-gi-dac-biet
+match = -44.4%%
+title = Bộ Everon EPM22063
+url = https://everon.online/products/bo-everon-epm-22063
 
 [everonhn.com.vn]
 match = 14.8%%
@@ -23,13 +23,13 @@ url = https://everonhn.com.vn/bo-chan-ga-everon-epm-22063
 
 [www.everonvn.vn]
 match = -20.0%%
-title = Everon EPM-24063 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
+title = Everon EPM-22069 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
+url = https://www.everonvn.vn/chi-tiet/everon-epm22069.html
 
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOool2XgeYEwd442C-a57K18hgc35s03V3J1C9FjtCYSSxvbJpVOV
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -39,7 +39,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 [www.everonvni.vn]
 match = 16.7%%
 title = BỘ CHĂN GA GỐI SẮC HẠ ESC23002
-url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/
+url = https://www.everonvni.vn/bo-chan-ga-goi-sac-ha-esc23002/?srsltid=AfmBOopJTpzm4XZo0w6pCBnraD_JYrmeYkjjAsCM90OIsTgaGhN2cKaI
 
 [everonhanquoc.vn]
 match = 19.4%%
