--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-07-29 06:16:54
+lastsearch = 2024-07-29 09:10:12
 
 [hanvico.com.vn]
 match = 38.1%%
@@ -14,7 +14,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
 [foreverbedding.net]
 match = -57.1%%
 title = Bộ ga chun chần mặt Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18?srsltid=AfmBOorALAx2OKiqpzBvinCjOoMq6RZeGncoReW2ys5A6UCA0aarvokB
+url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18
 
 [shopee.vn]
 match = -114.3%%
@@ -22,9 +22,9 @@ title = bộ vỏ chăn ga chun gối 18m x 2m cotton poly giá tốt Tháng ...
 url = https://shopee.vn/search?keyword=bộ vỏ chăn ga chun gối 18m x 2m cotton poly
 
 [changagoidemsonghong.com]
-match = -14.3%%
-title = Chăn ga gối Home mã H17-048 Sale 30%%
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
+match = -9.5%%
+title = Bộ chăn ga gối WaltDisney mã BY20002
+url = https://changagoidemsonghong.com/chan-ga-goi-by20002
 
 [demsonghonghanoi.com]
 match = -14.3%%
@@ -32,14 +32,14 @@ title = Bộ chăn ga gối Sông Hồng H16045 ga chun
 url = https://demsonghonghanoi.com/bo-chan-ga-goi-song-hong-h16045-ga-chun/
 
 [songhong.info]
-match = -71.4%%
-title = Chăn ga gối mã DN18-05 vải MicroSH khuyến mại -50%%
-url = https://songhong.info/chan-ga-goi-micro-dn1805
+match = 9.5%%
+title = Bộ chăn ga gối cao cấp mã UC22-018
+url = https://songhong.info/chan-ga-goi-uc018
 
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOorjkNt4snBAGBfr-rhJaHUYXB1e7RHvKsW0eHnt_duNfMPgsQ7r
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html
 
 [hoangkimhome.com]
 match = -90.5%%
