--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-07-29 03:34:01
+lastsearch = 2024-07-29 09:10:33
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
 match = -35.7%%
-title = Một vài tác dụng phụ của chiếu đèn vàng da sơ sinh
-url = https://www.vinmec.com/vie/bai-viet/mot-vai-tac-dung-phu-cua-chieu-den-vang-da-so-sinh-vi
+title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
+url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
 
 [www.hotdeal.vn]
 match = -25.0%%
@@ -37,9 +37,9 @@ title = Chiêm ngưỡng 20 viên đá rực rỡ đẹp nhất thế giới
 url = https://www.dkn.tv/van-hoa/nghe-thuat/21-loai-da-ruc-ro-gap-100-lan-kim-cuong.html
 
 [www.impehcm.org.vn]
-match = -71.4%%
-title = Giun đầu gai (Phần 1: Đại cương; Dịch tễ học; Đặc điểm hình ...
-url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/giun-dau-gai-phan-1-dai-cuong-dich-te-hoc-dac-diem-hinh-thai-hoc-va-chu-ky-phat-trien.html
+match = -17.9%%
+title = Bệnh sán dây bò (Taenia saginata) - Viện Sốt rét
+url = https://www.impehcm.org.vn/noi-dung/kham-benh-giun-san/benh-san-day-bo-taenia-saginata.html
 
 [www.thuocbietduoc.com.vn]
 match = -50.0%%
