--- a/images/ga-chun-dreamland-180x200-ct/config.ini
+++ b/images/ga-chun-dreamland-180x200-ct/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/ga-chun-dreamland-180x200-ct.html
 lastopen = 2024-06-07 01:32:20
 
 [search]
-lastsearch = 2024-07-29 08:01:55
+lastsearch = 2024-07-29 09:12:33
 
 [demxanh.com]
 match = -42.9%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 06
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-06.html
+title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 11
+url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-11.html?srsltid=AfmBOooFo9QT3jsk8U0djSSVIG5ZnUF85hblml5lUrZ5WZjJQ0llgI7G
 
 [www.diepxuan.com]
-match = -3.6%%
-title = Bộ chun chần WarmDream 180x200 lụa - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-chan-warmdream-180x200-lua.html
+match = 35.7%%
+title = Ga chun EPCARLESS 180x200 - Điệp Xuân
+url = https://www.diepxuan.com/ga-chun-epcarless-180x200.html?srsltid=AfmBOorxwwStp-p2FtRM62ryxQSL0KpFB709TXRje8m1Fz_aPdMToHDy
 
 [mgaleg.maryland.gov]
 match = -75.0%%
@@ -199,7 +199,7 @@ url = http://rainocup.com/index3.php?name=https://xn--b1axgco2a.xn--p1ai/8264395
 [diepxuan.com]
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/
+url = https://diepxuan.com/?srsltid=AfmBOoqj29M3t5PC1wmNq5UGoKp7NMYtXzk6q-uyftmzf2oTGvoIMJrw
 
 [www.tripadvisor.com]
 match = -50.0%%
