--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-07-29 05:45:39
+lastsearch = 2024-07-29 09:07:10
 
 [en.wikipedia.org]
 match = 8.7%%
@@ -92,9 +92,9 @@ title = 1968 Annual Supplement - Page 1252 - Google Books Result
 url = https://books.google.com/books?id=Xk32BwAAQBAJ&pg=PA1252&lpg=PA1252&dq=ruot+nem+korea+9f+14+19&source=bl&ots=P-86jXlida&sig=ACfU3U1p6xAoD0T5oprwSnTCqzgVnpvFhg&hl=en&sa=X&ved=2ahUKEwjz25vOmaGHAxVSAzQIHccMB4gQ6AF6BAgUEAM
 
 [30rates.com]
-match = -91.3%%
-title = USD to MXN forecast for tomorrow, this week and month.
-url = https://30rates.com/usd-to-mxn-today-forecast-dollar-to-mexican-peso
+match = -104.3%%
+title = Gold Price Prediction For Tomorrow, This Week And Month.
+url = https://30rates.com/gold-price-forecast-and-predictions
 
 [www.ncbi.nlm.nih.gov]
 match = -100.0%%
@@ -112,9 +112,9 @@ title =
 url = https://www.koreanclass101.com/korean-age/
 
 [www.tiktok.com]
-match = -8.7%%
-title = Colombians Riot Hard Rock Cafe
-url = https://www.tiktok.com/discover/colombians-riot-hard-rock-cafe
+match = 0.0%%
+title = Limerick Incident Bus Story
+url = https://www.tiktok.com/discover/limerick-incident-bus-story
 
 [www.unikorea.go.kr]
 match = -113.0%%
