--- a/images/ruot-goi-ke-everon-45x65-thap/config.ini
+++ b/images/ruot-goi-ke-everon-45x65-thap/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-thap.html
 lastopen = 2024-06-09 22:44:50
 
 [search]
-lastsearch = 2024-07-29 05:37:05
+lastsearch = 2024-07-29 10:30:00
 
 [www.everonvn.vn]
-match = -34.5%%
-title = Ruột chăn gối Everon cao cấp & chính hãng, có khuyến ...
-url = https://www.everonvn.vn/san-pham/ruot-everon.html
+match = 68.0%%
+title = Ruột gối Everon Lite thấp
+url = https://www.everonvn.vn/chi-tiet/ruot-goi-everon-lite.html
 
 [happynest.vn]
 match = 3.4%%
@@ -32,9 +32,9 @@ title = Ruột gối everon 45x65 hàng chính hãng, giao nhanh
 url = https://tiki.vn/search?q=ruột gối everon 45x65
 
 [thegioichanra.com]
-match = 10.3%%
-title = Ruột Gối Nằm Classic Everon Kích Thước 45×65 cm
-url = https://thegioichanra.com/san-pham/ruot-goi-nam-classic-everon-kich-thuoc-45x65-cm/
+match = 6.9%%
+title = Ruột Gối Nằm Standard Everon Kích Thước 45×65 cm
+url = https://thegioichanra.com/san-pham/ruot-goi-nam-standard-everon-kich-thuoc-45x65-cm/
 
 [everon.com.vn]
 match = 48.3%%
@@ -79,7 +79,7 @@ url = https://tongdailyeveron.com.vn/products/ruot-goi-thu-gian-co
 [www.diepxuan.com]
 match = 34.5%%
 title = Ruột gối kê Everon 45x65 thư giãn cổ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html?srsltid=AfmBOoomUdAbmQXCbt69ZvN_mT6WY6QlDS7H2ZeRkAtlbYHkjAnJnIss
+url = https://www.diepxuan.com/ruot-goi-ke-everon-45x65-relax.html
 
 [everonvn.com.vn]
 match = -20.7%%
