--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-07-29 01:46:38
+lastsearch = 2024-07-29 10:16:19
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -157,8 +157,8 @@ title = số đỏ casino xs 24|Casino Online Châu Á
 url = https://sinhvien.mit.vn/số-đỏ-casino-xs-24.phtm
 
 [www.facebook.com]
-match = -200.0%%
-title = Review phim chiếu rạp | K xem các phần trước có giểu dc ...
+match = -168.8%%
+title = Khen Phim - Review phim chiếu rạp | K xem các phần ...
 url = https://www.facebook.com/groups/khenphim/posts/k-xem-các-phần-trước-có-giểu-dc-nội-dung-phim-này-k-mng-mình-xin-rv-phim-có-hay-/1779205792553570/
 
 [www.bthh.org.vn]
