--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-29 03:21:42
+lastsearch = 2024-07-29 10:25:54
 
 [screenrant.com]
 match = 0.0%%
@@ -17,9 +17,9 @@ title = Luật Di trú và Cuộc sống Mỹ | BỊ THU HỒI THẺ XANH KHI ..
 url = https://www.facebook.com/groups/2380571462183901/posts/bị-thu-hồi-thẻ-xanh-khi-nhập-cảnh-trở-lại-mỹ-vàcách-thức-xin-lại-thẻ-xanh-trong-/3003989423175432/
 
 [www.youtube.com]
-match = -185.7%%
-title = HƯỚNG DẪN CÁCH PHỤC HỒI THẺ XANH SAU KHIỞ VIỆT ...
-url = https://www.youtube.com/watch?v=3ycihnhaARo
+match = -250.0%%
+title = Low-budget GREEN SCREEN at home | What gives the best ...
+url = https://www.youtube.com/watch?v=axwpepx1FTw
 
 [www.reddit.com]
 match = -64.3%%
@@ -29,11 +29,11 @@ url = https://www.reddit.com/r/VietNam/comments/18zushv/why_are_xanh_sm_drivers_
 [demxanh.com]
 match = 28.6%%
 title = Màn chụp giá rẻ
-url = https://demxanh.com/man-chup-gia-re.html
+url = https://demxanh.com/man-chup-gia-re.html?srsltid=AfmBOooLm4-Wb_j24dfsFEcu_h1Vecldf-R9fKXDZ5piE2ho1HXRtceC
 
 [www.uscis.gov]
-match = -7.1%%
-title = Explore my Options
+match = -50.0%%
+title = Explore my Options | USCIS
 url = https://www.uscis.gov/forms/explore-my-options
 
 [www.evergreenrecreation.com]
@@ -82,9 +82,9 @@ title = 10 Evidence-Based Benefits of Green Tea
 url = https://www.healthline.com/nutrition/top-10-evidence-based-health-benefits-of-green-tea
 
 [en.wikipedia.org]
-match = 7.1%%
-title = Little green men
-url = https://en.wikipedia.org/wiki/Little_green_men
+match = -20.0%%
+title = Green card
+url = https://en.wikipedia.org/wiki/Green_card
 
 [www.imdb.com]
 match = 0.0%%
