--- a/images/nem-everhome-tc-16-20/config.ini
+++ b/images/nem-everhome-tc-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everhome-tc-16-20.html
 lastopen = 2024-06-09 23:43:18
 
 [search]
-lastsearch = 2024-07-29 06:58:14
+lastsearch = 2024-07-29 10:15:16
 
 [www.sieuthinem.com]
 match = -28.6%%
@@ -13,8 +13,8 @@ url = https://www.sieuthinem.com/ct-san-pham/273/nem-cao-su-thien-nhien-everhome
 
 [demxanh.com]
 match = -19.0%%
-title = Đệm bông ép chính hãng giảm 50 ...
-url = https://demxanh.com/dem-bong-ep.html?srsltid=AfmBOoo1CB6-T2Q67lwE-q--Rga0wKDqyYEjbSt36HvtnapX8Dmo6U9P
+title = Đệm bông ép Everhome 1m8 giá bao nhiêu?
+url = https://demxanh.com/dem-bong-ep-everhome-1m8-gia-bao-nhieu.html
 
 [www.ebay.com]
 match = -95.2%%
@@ -27,9 +27,9 @@ title = Should an Abugida script be created for Vietnamese? ...
 url = https://www.quora.com/Should-an-Abugida-script-be-created-for-Vietnamese-An-abugida-script-in-my-opinion-will-look-cool-and-can-also-be-the-first-ever-home-grown-script-instead-of-the-forever-taking-Chinese-characters-or-the-foreign
 
 [sieuthidemonline.vn]
-match = -85.7%%
-title = Đệm cao su thiên nhiên cao cấp Lavender Everhome
-url = https://sieuthidemonline.vn/dem-cao-su-lavender/
+match = -81.0%%
+title = Bảng giá Đệm bông Nano chống khuẩn Everhome vỏ gấm
+url = https://sieuthidemonline.vn/dem-bong-nano-evererhome-gam/
 
 [thegioidemviet.vn]
 match = -119.0%%
@@ -37,9 +37,9 @@ title = [Top 20] Đệm Hanvico bán chạy nhất Tháng 10-11/2023 , ...
 url = https://thegioidemviet.vn/dem-hanvico/
 
 [www.diepxuan.com]
-match = 23.8%%
-title = Nệm everhome TC 15F 16 20 - Điệp Xuân
-url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html?srsltid=AfmBOoqTLvTHX_T5-pXqe22J7Gp3gQ6plT6rAVI8GK1xJt4rmRu7y_DJ
+match = -61.9%%
+title = Điệp Xuân Nệm Everhome - Chăn ga gối đệm Điệp Xuân
+url = https://www.diepxuan.com/nem-everhome.html
 
 [bachhoadem.vn]
 match = 28.6%%
@@ -54,7 +54,7 @@ url = https://demsingapore.com/dem-bong-ep-everhome-vo-tc.html
 [demviethome.vn]
 match = -52.4%%
 title = Tổng kho đệm bông ép chính hãng tại Hà Nội
-url = https://demviethome.vn/dem-bong-ep/?srsltid=AfmBOooV31Yf0y8-IbaIaY9QK2g94Pkynj6oMQ0G6hrA5Cb83d0W4AiH
+url = https://demviethome.vn/dem-bong-ep/
 
 [www.tiktok.com]
 match = -95.2%%
