--- a/images/ruot-goi-ke-everhome-mong/config.ini
+++ b/images/ruot-goi-ke-everhome-mong/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-everhome-mong.html
 lastopen = 2024-06-10 00:15:54
 
 [search]
-lastsearch = 2024-07-29 06:32:04
+lastsearch = 2024-07-29 10:22:04
 
 [everhomevietnam.com]
 match = 12.0%%
@@ -19,7 +19,7 @@ url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 [demxanh.com]
 match = -44.0%%
 title = Top 9 loại gối cho người nằm ngửa tốt nhất 2024
-url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html
+url = https://demxanh.com/goi-cho-nguoi-nam-ngua-tot-nhat.html?srsltid=AfmBOoo95yLvC2Busf-iiLT7pqmz7yS_UZf28OCoYYYD3pNR_37tm5RU
 
 [khodem.vn]
 match = 24.0%%
@@ -112,9 +112,9 @@ title = Ruột gối - Everhome
 url = https://demeverhome.com/san-pham/ruot-goi/
 
 [thegioidemonline.com]
-match = 4.0%%
-title = Bảng giá chăn ga gối Everhome năm 2022
-url = https://thegioidemonline.com/bang-gia-chan-ga-goi-everhome-nam-2020.html
+match = -56.0%%
+title = Cách giặt chăn ga gối Dreamland đơn giản hiệu quả
+url = https://thegioidemonline.com/cach-giat-chan-ga-goi-dreamland-don-gian-hieu-qua.html?srsltid=AfmBOor7NEKOu0xxpAXa6WePzPzJpME0P9OSCdJ5_mkU6_SQTPZv4Ly4
 
 [thegioidemdep.com]
 match = -24.0%%
