--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-07-29 10:25:54
+lastsearch = 2024-07-29 11:23:24
 
 [screenrant.com]
 match = 0.0%%
@@ -29,7 +29,7 @@ url = https://www.reddit.com/r/VietNam/comments/18zushv/why_are_xanh_sm_drivers_
 [demxanh.com]
 match = 28.6%%
 title = Màn chụp giá rẻ
-url = https://demxanh.com/man-chup-gia-re.html?srsltid=AfmBOooLm4-Wb_j24dfsFEcu_h1Vecldf-R9fKXDZ5piE2ho1HXRtceC
+url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
 match = -50.0%%
