--- a/images/vo-goi-epm20065-45x65/config.ini
+++ b/images/vo-goi-epm20065-45x65/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-epm20065-45x65.html
 lastopen = 2024-07-07 18:08:23
 
 [search]
-lastsearch = 2024-07-29 02:19:25
+lastsearch = 2024-07-29 11:18:17
 
 [www.diepxuan.com]
 match = -19.0%%
 title = Vỏ gối kê WarmDream 45x65 HQ - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html?srsltid=AfmBOoqOzSQOK1cgyBtnRgiFOw9V-41A5PuoJAHrN2Tic4uNb8WFZ4iN
+url = https://www.diepxuan.com/vo-goi-ke-warmdream-45x65-hq.html
 
 [tiki.vn]
 match = -81.0%%
