CI images update

--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-07-29 02:31:52
+lastsearch = 2024-07-29 11:59:02
 
 [hoa18.com]
 match = -84.2%%
-title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
-url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
+title = Bó hoa tươi Nắng Toả Chiều Nay" | Giá tốt nhất
+url = https://hoa18.com/san-pham/bo-hoa-tuoi-nang-toa-chieu-nay
 
 [www.youtube.com]
-match = -89.5%%
-title = Hoa Mộc Hương ta có cần cắt tỉa tạo tán không?
-url = https://www.youtube.com/watch?v=rDqH9asT7yA
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [kallos.co]
 match = -105.3%%
@@ -102,9 +102,9 @@ title = Giá vàng mất mốc 67 triệu đồng/lượng
 url = https://www.baodienbienphu.com.vn/tin-tuc/kinh-te/204300/gia-vang-mat-moc-67-trieu-dongluong?page=73
 
 [nongnghiep.vn]
-match = -110.5%%
-title = Họa sĩ Phan Như Lâm và ánh sáng ân tình làng quê
-url = https://nongnghiep.vn/hoa-si-phan-nhu-lam-va-anh-sang-an-tinh-lang-que-d394197.html
+match = -152.6%%
+title = Bưu điện Việt Nam ra mắt bộ tem Bảo vật quốc gia về đồ ...
+url = https://nongnghiep.vn/buu-dien-viet-nam-ra-mat-bo-tem-bao-vat-quoc-gia-ve-do-gom-d394415.html
 
 [vietjack.com]
 match = -131.6%%
@@ -265,4 +265,14 @@ url = https://truyenyy.pro/truyen/trong-sinh-2000-thanh-mai-giao-hoa-18-tuoi/chu
 match = 0.0%%
 title = Chủ động với cơ chế đặc thù
 url = https://baogialai.com.vn/chu-dong-voi-co-che-dac-thu-post285949.html
+
+[quochoi.vn]
+match = -142.1%%
+title = phát triển công nghiệp dược cần cơ chế hỗ trợ, ưu đãi phù ...
+url = https://quochoi.vn/tintuc/Pages/tin-doan-dai-bieu-quoc-hoi.aspx?ItemID=87492
+
+[www.evn.com.vn]
+match = -147.4%%
+title = Hà Giang: Nỗ lực đưa điện lưới quốc gia về các thôn, bản ...
+url = https://www.evn.com.vn/d6/news/Ha-Giang-No-luc-dua-dien-luoi-quoc-gia-ve-cac-thon-ban-vung-sau-vung-xa-6-13-125248.aspx
 
