--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-07-28 23:49:18
+lastsearch = 2024-07-29 11:54:50
 
 [www.bible.com]
 match = -128.6%%
@@ -52,9 +52,9 @@ title = Màn chụp tự bung Gia Long 16x18x2cm - Loại 2 cửa
 url = https://boba.vn/man-chup-tu-bung-nguoi-lon/man-chup-tu-bung-gia-long-1-6-1-8x-2m-loai-2-cua
 
 [shopee.vn]
-match = -185.7%%
-title = Màn Khung Không Khoan Tường GIA LONG Khung Inox ...
-url = https://shopee.vn/Màn-Khung-Không-Khoan-Tường-GIA-LONG-Khung-Inox-304-Phi-16-Màu-Xanh-Hồng-KT-1m4-1m6-1m8-2m-i.1120412717.24251331954
+match = -128.6%%
+title = màn chụp giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=màn chụp
 
 [text.egwwritings.org]
 match = -78.6%%
