--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-29 11:23:03
+lastsearch = 2024-07-29 11:51:22
 
 [www.diepxuan.com]
 match = -72.7%%
 title = Điệp Xuân Bộ ga gối chun coco 18 - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html?srsltid=AfmBOor8Qge4vWorUsHSHW5J8ZOmzdsQFBonxLuN6Eb89wef43tX1Nic
+url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 
 [shopee.vn]
 match = -68.2%%
@@ -17,9 +17,9 @@ title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2023 ...
 url = https://shopee.vn/Bộ-Ga-Gối-Nỉ-Nhung-COCO-in-Nổi-Hoạ-Tiết-Mẫu-Mới-2023-Chất-Liệu-Dày-Dặn-Mềm-Mịn-Ấm-Áp-Cao-Cấp-Giữ-Nhiệt-Tốt-i.29708084.23159379927
 
 [m.facebook.com]
-match = -100.0%%
-title = Bùng nổ với Ga Gối Coco... - H&T Bedding - Tổng Kho Phân Phối
-url = https://m.facebook.com/story.php/?story_fbid=222482430873756&id=100093360007450
+match = -18.2%%
+title = COCO Decor - Chăn Ga Gối | Nam Định
+url = https://m.facebook.com/cocodecorchangagoidem/
 
 [hanvico.com.vn]
 match = 31.8%%
@@ -29,7 +29,7 @@ url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 [www.lazada.vn]
 match = -50.0%%
 title = Bộ Ga Giường Cao Cấp Loại Ga Chun Giá Tốt T07/2024
-url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/?srsltid=AfmBOoofynthB2n-w20Qr0X-66kHwG5TnV7OvbQUGVuu8f0t9JWTyJGS
+url = https://www.lazada.vn/tag/bo-ga-giuong-cao-cap-loai-ga-chun/
 
 [www.instagram.com]
 match = 4.5%%
@@ -37,9 +37,9 @@ title = 𝔹𝕦̀𝕟𝕘 𝕟𝕠̂̉ 𝕤𝕚𝕖̂𝕦 𝕡𝕙𝕒̂̉𝕞 
 url = https://www.instagram.com/chomchomchangagoi/p/Crd1DC4pqMk/
 
 [h5.lazada.vn]
-match = -50.0%%
-title = Bộ Ga Gối Nỉ Nhung COCO in Nổi Hoạ Tiết Mẫu Mới 2024
-url = https://h5.lazada.vn/products/bo-ga-goi-ni-nhung-coco-in-noi-hoa-tiet-mau-moi-2024-chat-lieu-day-dan-mem-min-am-ap-kich-co-m6m82m2-do-do-i2561755774-s12526131772.html
+match = -40.9%%
+title = SET GA GỐI TRẦN BÔNG SƠ ĐẬU NÀNH BỌC CHUN 28CM
+url = https://h5.lazada.vn/products/set-ga-goi-tran-bong-so-dau-nanh-boc-chun-28cm-i2270667932-s10970367704.html
 
 [www.sendo.vn]
 match = -90.9%%
