--- a/images/chieu-dieu-hoa-kem-goi-14/config.ini
+++ b/images/chieu-dieu-hoa-kem-goi-14/config.ini
@@ -7,9 +7,9 @@ lastopen = 2024-07-01 09:57:37
 lastsearch = 2024-07-29 11:45:42
 
 [shopee.vn]
-match = 0.0%%
-title = Chiếu Điều Hòa Giá Tốt, Chất Lượng, Đảm Bảo
-url = https://shopee.vn/list/chiếu điều hòa
+match = -24.0%%
+title = chiếu điều hòa kèm gối giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=chiếu điều hòa kèm gối
 
 [meoi.com.vn]
 match = 24.0%%
@@ -42,9 +42,9 @@ title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
 url = https://demxanh.com/chieu-dieu-hoa.html
 
 [tiki.vn]
-match = -20.0%%
-title = Chieu dieu hoa kem vo goi hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chieu dieu hoa kem vo goi
+match = 16.0%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [goni.vn]
 match = 8.0%%
