--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-29 06:49:01
+lastsearch = 2024-07-29 11:55:11
 
 [everonvn.com.vn]
-match = -171.4%%
-title = Bảng giá bộ chăn ga gối trẻ em Everon Trains họa tiết in đoàn ...
-url = https://everonvn.com.vn/everon/534/bo-tre-em-trains
+match = -133.3%%
+title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
 match = -66.7%%
@@ -22,14 +22,14 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -123.8%%
-title = Lịch sử giá Bộ ga phủ everon esm-21012 - đang giảm 150.000 ...
-url = https://muathongminh.vn/bo-ga-phu-esm-21012-01-ga-phu-02-vo-goi-45cmx65cm-01-vo-chan-dong-2mx2m2-p.1__7745632717__40934475
+match = -142.9%%
+title = Trọn bộ chăn ga gối satin poly 7 món ga phủ trần bông ...
+url = https://muathongminh.vn/tron-bo-chan-ga-goi-satin-poly-7-mon-ga-phu-tran-bong-koseul-san-hang-p.1__7418213403__16397825
 
 [beecost.vn]
-match = -61.9%%
-title = Giảm giá Bộ chăn ga "nàng thơ' set 4 món
-url = https://beecost.vn/bo-chan-ga-nang-tho-set-4-mon-ai-la-nang-tho-vao-day-shop-ban-re-p.1__8162491061__894551
+match = -176.2%%
+title = Lịch sử giá Srm set chăn ga gối 5 món cotton living drap hàn ...
+url = https://beecost.vn/srm-set-chan-ga-goi-5-mon-cotton-living-drap-han-quoc-ga-phu-giuong-chan-bong-day-cao-cap-he-thong-n-p.1__9631034161__146302121
 
 [www.reef2reef.com]
 match = -61.9%%
