--- a/images/tham-nhung-bali-160x230/config.ini
+++ b/images/tham-nhung-bali-160x230/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-nhung-bali-160x230.html
 lastopen = 2024-06-07 00:35:43
 
 [search]
-lastsearch = 2024-07-29 11:16:10
+lastsearch = 2024-07-29 12:00:22
 
 [demxanh.com]
 match = 0.0%%
 title = Thảm trải sàn Bali siêu khuyến mại
-url = https://demxanh.com/tham-trai-san-bali.html?srsltid=AfmBOoofP2CoNPwNYDnzQF8Hy7yI6xmpCQF2OpsCzj-9HVY0Irr5WtL2
+url = https://demxanh.com/tham-trai-san-bali.html
 
 [www.lazada.vn]
 match = -78.3%%
 title = Thảm Trải Sàn 100%% Nhập Khẩu Cao Cấp, Sang Trọng ...
-url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html?srsltid=AfmBOooIsXe5-OYBy8V3p0Xti29DcdTfNHUqVsrna2PCdUacKIgf5ba3
+url = https://www.lazada.vn/products/mua-tham-nhan-qua-tham-li-bali-tham-trai-san-100-nhap-khau-cao-cap-sang-trong-120x160cm-160x230cm-200x300cm-i1557438611-s6573104309.html
 
 [tiki.vn]
 match = -47.8%%
