--- a/images/tham-ni-xop-mau-60/config.ini
+++ b/images/tham-ni-xop-mau-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-mau-60.html
 lastopen = 2024-06-06 16:51:51
 
 [search]
-lastsearch = 2024-07-29 01:54:43
+lastsearch = 2024-07-29 11:51:43
 
 [thamaulac.com.vn]
 match = -88.9%%
@@ -67,9 +67,9 @@ title = Thảm xốp cho bé hình cỏ (60 x 60cm x 9mm)
 url = https://thamtretho.com/tham-co
 
 [www.pinterest.com]
-match = -83.3%%
-title = Thảm xốp một màu 60*60cm giá rẻ tại Hồ Chí Minh
-url = https://www.pinterest.com/pin/763993524284509627/
+match = -161.1%%
+title = Thảm xốp trải lót sàn mặt nỉ hoa văn 60x60 giá rẻ | 10 things
+url = https://www.pinterest.com/pin/763993524284509692/
 
 [www.facebook.com]
 match = -11.1%%
