CI images update

--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-07-29 11:35:03
+lastsearch = 2024-07-29 12:15:04
 
 [chanrathanhthuy.com]
 match = 9.7%%
@@ -12,14 +12,14 @@ title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
 url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
 
 [demxanh.com]
-match = -16.1%%
-title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
-url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
+match = 25.8%%
+title = Bộ chăn ga gối lụa Singapore luxury 7 món L7M18
+url = https://demxanh.com/bo-chan-ga-goi-lua-singapore-luxury-7-mon-l7m18.html
 
 [songhongonline.vn]
-match = 53.8%%
-title = Bộ chăn ga gối SH_UC23 031
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-32
+match = 8.7%%
+title = Bộ sản phẩm SH_BC22 057
+url = https://songhongonline.vn/products/bo-chan-ga-goi-song-hong-sh-bc22-057
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -210,4 +210,9 @@ url = https://spacet.vn/shop/bo-chan-ga-goi-cotton-sweet-love-18-5193
 match = -81.8%%
 title = Chăn Ga Gối
 url = https://demtot.com/chan-ga-goi/
+
+[uannga.vn]
+match = 41.9%%
+title = Bộ chăn ga gối Sông Hồng SH_H18 057 180*200
+url = https://uannga.vn/index.php/shops/Chan-Ga-Song-Hong/bo-chan-ga-goi-song-hong-sh-h18-057-180-200.html
 
