--- a/images/bo-chan-ga-goi-mau-re-16/config.ini
+++ b/images/bo-chan-ga-goi-mau-re-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-mau-re-16.html
 lastopen = 2024-06-09 23:45:13
 
 [search]
-lastsearch = 2024-07-29 11:40:29
+lastsearch = 2024-07-29 12:15:25
 
 [changagoidemsonghong.com]
-match = 4.2%%
-title = Chăn ga gối classic cotton mã C16-C38
-url = https://changagoidemsonghong.com/chan-ga-goi-cotton-c16-c38
+match = -12.5%%
+title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
+url = https://changagoidemsonghong.com/chan-ga-goi-bc16
 
 [www.diepxuan.com]
 match = -58.3%%
@@ -92,9 +92,9 @@ title = Mẫu 16 - Chăn Ga Gối Đệm Benlinda Hải Phòng
 url = https://changagoibenlinda.com/mau-16
 
 [bochangagoi.vn]
-match = -70.8%%
-title = Bộ chăn ga gối OZ Bedding - Top 5 mẫu chăn ga gối cao cấp ...
-url = https://bochangagoi.vn/
+match = -12.5%%
+title = Những bộ chăn ga gối đệm dành riêng cho homestay
+url = https://bochangagoi.vn/nhung-bo-chan-ga-goi-dem-danh-rieng-cho-homestay/
 
 [ninhouse.vn]
 match = -75.0%%
@@ -132,9 +132,9 @@ title = Mua bán bộ chăn ga gối nệm hàn quốc mới giá rẻ ở đâu
 url = https://dodungnoithat.vn/chan-ga-goi-nem-han-quoc-dep-gia-re-o-dau-sai-gon/
 
 [www.facebook.com]
-match = -29.2%%
-title = Chăn Ga Gối Đệm Giá Rẻ ( Lấy Hàng Tại Xưởng )
-url = https://www.facebook.com/groups/2582240008763254/
+match = -70.8%%
+title = Chan ga goi nem Han Quoc gia re - MS hang: VIKOFUR 16-1 ...
+url = https://www.facebook.com/photo/?fbid=895871970464995&set=ms.c.eJxFzNsNwEAIA8GOIt42~;TcW5RCXz9Ea2EloQ6KiOx9~_thRH0~;Ab6lrCtZ596Nqn373Pva3nv28vnp54AZQ5Gk0~-.bps.a.895871950464997
 
 [thitruongsi.com]
 match = -50.0%%
@@ -142,9 +142,9 @@ title = Bộ Chăn Ga Gối cotton Phối Màu Giá Rẻ giá sỉ, giá bán bu
 url = https://thitruongsi.com/bo-chan-ga-goi-cotton-phoi-mau-gia-re-1713025.html
 
 [goni.vn]
-match = 4.2%%
-title = Bộ chăn mền ga gối Goni tici màu đỏ mận xám
-url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-do-man-xam/
+match = -62.5%%
+title = Bộ Chăn Ga Gối Trẻ Trung, Mềm Mịn, Mát Mẻ - Ưu đãi tháng 07
+url = https://goni.vn/chan-ga-goi/
 
 [flexhouse.vn]
 match = 0.0%%
@@ -160,4 +160,19 @@ url = https://demviethome.vn/bo-chan-ga-goi-lamour-lmm16/
 match = 29.2%%
 title = Bảng giá chăn ga gối đệm mới nhất
 url = https://thegioinem.com/bang-gia-chan-ga-goi-dem.html
+
+[www.lazada.vn]
+match = -91.7%%
+title = (Siêu rẻ) Bộ 3 món Ga gối, ga bọc nệm mẫu Dâu Tây Hồng, drap ...
+url = https://www.lazada.vn/products/sieu-re-bo-3-mon-ga-goi-ga-boc-nem-mau-dau-tay-hong-drap-giuong-gia-re-kich-thuoc-m2m6m82m2-chat-poly-cotton-ga-bo-chun-bao-ve-dem-chan-ga-goi-moon-shop-i1268250205-s9629936141.html?from_gmc=1&fl_tag=1
+
+[mym.com.vn]
+match = 50.0%%
+title = Bộ Drap Gối Cotton Màu - 16
+url = https://mym.com.vn/bo-drap-goi-cotton-mau-16
+
+[koala.vn]
+match = 25.0%%
+title = Bộ Chăn Ga Gối Koala WF 16 (200*220cm)
+url = https://koala.vn/bo-chan-ga-goi-koala-wf-16.html
 
