--- a/images/chieu-cay-cao-bang-lua-18/config.ini
+++ b/images/chieu-cay-cao-bang-lua-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-lua-18.html
 lastopen = 2024-06-09 22:41:28
 
 [search]
-lastsearch = 2024-07-29 01:00:19
+lastsearch = 2024-07-29 12:22:17
 
 [chieutruc.info]
 match = -60.0%%
@@ -32,9 +32,9 @@ title = Chiếu Trúc Cao Bằng Hàng Xuất Khẩu Dùng Liệu Có tốt?
 url = https://www.youtube.com/watch?v=sGb4V5EQcww
 
 [chieutrucsaigon.com]
-match = -4.0%%
-title = CHIẾU TRÚC CAO BẰNG CHÍNH HÃNG ĐƯỢC BÁN Ở ...
-url = https://chieutrucsaigon.com/tin-tuc/tin-trong-nuoc/chieu-truc-cao-bang-chinh-hang-duoc-ban-o-dau-71.html
+match = 44.0%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M8X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m8x2m.html
 
 [hanggiadunghatinh.com]
 match = 40.0%%
