--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-07-29 04:17:38
+lastsearch = 2024-07-29 12:36:46
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 [demxanh.com]
 match = -87.0%%
 title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html?srsltid=AfmBOorADYME6__9uuSRD5k5s5HNitKl0Z3-3JQjARIibFck-KEayJo-
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -42,9 +42,9 @@ title = Chiếu tre - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu tre
 
 [www.youtube.com]
-match = -82.6%%
-title = Live bà liễu, thỏ đỏ , chậu 16, chậu thiết kế 0333491000
-url = https://www.youtube.com/watch?v=7RmfO3zUuYM
+match = -87.0%%
+title = Công Giáp || Trưởng C.A Huyện, Trực Tiếp Xuống Chung Tay ...
+url = https://www.youtube.com/watch?v=gjdmyaB_gho
 
 [hcmcpv.org.vn]
 match = -91.3%%
