--- a/images/bo-bon-mua-epm21069-180x200/config.ini
+++ b/images/bo-bon-mua-epm21069-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-bon-mua-epm21069-180x200.html
 lastopen = 2024-06-07 00:16:06
 
 [search]
-lastsearch = 2024-07-29 11:17:55
+lastsearch = 2024-07-29 12:32:56
 
 [everon.online]
 match = -7.4%%
@@ -27,14 +27,14 @@ title = Bộ chăn ga gối Everon EPM-21069 | Khuyến mãi
 url = https://demxanh.com/bo-chan-ga-goi-everon-epm-21069.html
 
 [everonhanquoc.vn]
-match = 18.5%%
-title = Bộ chăn ga gối Everon EPC-21053
-url = https://everonhanquoc.vn/everon/12776/bo-chan-ga-goi-everon-epc-21053
+match = 22.2%%
+title = Bộ chăn ga gối Everon EPM-21070
+url = https://everonhanquoc.vn/everon/12768/bo-chan-ga-goi-everon-epm-21070
 
 [everonhn.com.vn]
-match = 33.3%%
-title = Bộ chăn ga Everon ESB -22020
-url = https://everonhn.com.vn/bo-chan-ga-everon-esc-22020
+match = 25.9%%
+title = Bộ chăn ga everon EPM- 21069
+url = https://everonhn.com.vn/bo-chan-ga-everon-epm-21069
 
 [everon.net.vn]
 match = -18.5%%
