--- a/images/chan-hoi-mai-rua/config.ini
+++ b/images/chan-hoi-mai-rua/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chan-hoi-mai-rua.html
 lastopen = 2024-06-09 23:40:13
 
 [search]
-lastsearch = 2024-07-29 10:49:37
+lastsearch = 2024-07-29 12:47:51
 
 [shopee.vn]
-match = -162.5%%
-title = Chăn Lông Cừu Đại Hàn , Chăn cừu mai rùa siêu ấm kích ...
-url = https://shopee.vn/Chăn-Lông-Cừu-Đại-Hàn-Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng~-3-8kg-Hàng-Loại-1-Cao-Cấp-Dày-3-Lớp-Siêu-Ấm-i.134729951.23858267538
+match = -137.5%%
+title = Chăn cừu mai rùa siêu ấm kích thước 2mx2m3 nặng 2kg
+url = https://shopee.vn/Chăn-cừu-mai-rùa-siêu-ấm-kích-thước-2mx2m3-nặng-2kg-i.18553977.19585650220
 
 [www.instagram.com]
-match = -156.2%%
-title = Rua-chan (@rua_kouhai) • Instagram photos and videos
-url = https://www.instagram.com/rua_kouhai/?hl=en
+match = -162.5%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [vi.wikipedia.org]
 match = 28.6%%
@@ -209,7 +209,7 @@ url = https://www.nichieiasia.com/mai-rua-co-tac-dung-gi-tai-sao-dan-ong-nen-an-
 [www.diepxuan.com]
 match = 6.2%%
 title = Chăn cừu mai rùa - Điệp Xuân
-url = https://www.diepxuan.com/chan-cuu-mai-rua.html?srsltid=AfmBOoq1NCB-ebhNEvf-IN4LH_zykp0rvkwe2fOfx8sC5xEaWkD8d-Ln
+url = https://www.diepxuan.com/chan-cuu-mai-rua.html
 
 [www.makemytrip.com]
 match = -37.5%%
