--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-07-29 02:44:07
+lastsearch = 2024-07-29 12:42:36
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -47,9 +47,9 @@ title = ESL TEACHER : Changing School without leaving Vietnam
 url = https://www.expat.com/forum/viewtopic.php?id=994131
 
 [en.wikipedia.org]
-match = 0.0%%
-title = Ho Chi Minh City
-url = https://en.wikipedia.org/wiki/Ho_Chi_Minh_City
+match = 17.4%%
+title = List of cities in Vietnam
+url = https://en.wikipedia.org/wiki/List_of_cities_in_Vietnam
 
 [books.google.com]
 match = -43.5%%
@@ -327,8 +327,8 @@ title = Việt Nam và ADB
 url = https://www.adb.org/vi/where-we-work/viet-nam
 
 [us.trip.com]
-match = -43.5%%
-title = Hotels near Tô Tượng Ánh Kim, Ho Chi Minh City
+match = -104.3%%
+title = Best 10 Hotels Closest to Tô Tượng Ánh Kim in Ho Chi Minh City
 url = https://us.trip.com/hotels/ho-chi-minh-city-t-tng-nh-kim/hotels-c301m50945149/
 
 [en.tripadvisor.com.hk]
