--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-12.html
 lastopen = 2024-06-09 23:04:00
 
 [search]
-lastsearch = 2024-07-29 10:45:07
+lastsearch = 2024-07-29 12:35:40
 
 [chieutruc.info]
 match = -73.9%%
@@ -12,9 +12,9 @@ title = Chiếu trúc Cao Bằng Cao Sơn - thương hiệu hàng đầu Việt 
 url = https://chieutruc.info/chieu-truc-cao-bang-cao-son/
 
 [demxanh.com]
-match = 30.4%%
-title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
-url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html?srsltid=AfmBOoo103PgzJlAM6Lt5ZlJQuj50bRRGJ4zgxwvZ-ppWCJV20bp5jei
+match = -21.7%%
+title = Chiếu Trúc Cao Bằng Cao Sơn chính hãng - Hà Nội
+url = https://demxanh.com/chieu-truc-cao-bang.html
 
 [chieutrucsaigon.com]
 match = -13.0%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/Chiếu-cao-bằng-Việt-Nam-1.2m-x-1.95-i.79170238.158
 [www.lazada.vn]
 match = 21.7%%
 title = Chiếu cao bằng Việt Nam 1.2 X 1.95
-url = https://www.lazada.vn/products/chieu-cao-bang-viet-nam-12-x-195-i2173902354-s10284366594.html?&search=pdp_same_topselling?mp=1&scm=1007.16389.286994.0&clickTrackInfo=ae2e58a3-3b1f-4f66-b29a-908b313d47ba__2173902354__13045__shop__224806__0.5813963__0.5813963__0.0__0.0__0.0__0.5813963__1__null__null__null__null__null__null____560000.0__0.0__0.0__0__560000.0__113326__null__null__null__3650.16545_955.7331__null__13426__null__0.0__0.0________null__null&spm=a211g0.pdp.recommend_1.2&srsltid=AfmBOoqUb9999axMU6gg_vOSYU_qMGgWEnd7EGnMoalkvx7PMCX_v10p
+url = https://www.lazada.vn/products/chieu-cao-bang-viet-nam-12-x-195-i2173902354-s10284366594.html?&search=pdp_same_topselling?mp=1&scm=1007.16389.286994.0&clickTrackInfo=ae2e58a3-3b1f-4f66-b29a-908b313d47ba__2173902354__13045__shop__224806__0.5813963__0.5813963__0.0__0.0__0.0__0.5813963__1__null__null__null__null__null__null____560000.0__0.0__0.0__0__560000.0__113326__null__null__null__3650.16545_955.7331__null__13426__null__0.0__0.0________null__null&spm=a211g0.pdp.recommend_1.2
 
 [chieu.com.vn]
 match = -4.3%%
@@ -44,7 +44,7 @@ url = https://suongtuyet.com/chieu-truc-cao-bang
 [www.diepxuan.com]
 match = 26.1%%
 title = Chiếu cây Cao Bằng A 120x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html?srsltid=AfmBOopl9TG0ZpQqj1TV75IR7tQFeQyP1JtaP83JitT5lebi8C-Zm_I1
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-120x190.html
 
 [chieutruccaobang.com.vn]
 match = 52.6%%
