--- a/images/chieu-cay-dai-loan-vien-da16/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da16.html
 lastopen = 2024-06-09 22:41:37
 
 [search]
-lastsearch = 2024-07-29 12:00:43
+lastsearch = 2024-07-29 12:40:13
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -315,4 +315,9 @@ url = https://dongduongtravel.com/?x=342/du-lich-trong-nuoc/chua-huong-tich-den-
 match = -14.3%%
 title = Về Bệnh Hậu Môn Caác - industria alimentare
 url = https://industria-alimentare.it/811679-môn-về-hậu-caác-bệnh.html
+
+[fbtag.net]
+match = 21.4%%
+title = Ung thư - Trời kêu ai nấy dạ
+url = https://fbtag.net/d/659670-ung-thu-troi-keu-ai-nay-da
 
