--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-07-29 11:55:11
+lastsearch = 2024-07-29 12:45:22
 
 [everonvn.com.vn]
 match = -133.3%%
@@ -12,8 +12,8 @@ title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
 url = https://everonvn.com.vn/everon/611/bo-everon-es1807
 
 [www.everonqb.com]
-match = -66.7%%
-title = Ga phủ EPC19056 160x200 - Everon Quảng Bình Trang Chủ
+match = -9.5%%
+title = Everon Quảng Bình Ga phủ EPC19056 160x200
 url = https://www.everonqb.com/ga-phu-epc19056-160x200.html
 
 [www.diepxuan.com]
@@ -22,14 +22,14 @@ title = Ga phủ ESM20013 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/ga-phu-esm20013-180x200.html
 
 [muathongminh.vn]
-match = -142.9%%
-title = Trọn bộ chăn ga gối satin poly 7 món ga phủ trần bông ...
-url = https://muathongminh.vn/tron-bo-chan-ga-goi-satin-poly-7-mon-ga-phu-tran-bong-koseul-san-hang-p.1__7418213403__16397825
+match = -119.0%%
+title = [Giảm 140.000 ₫] Chăn ga gối lụa thêu 100s “ kid luxury “
+url = https://muathongminh.vn/set-chan-ga-goi-phu-cotton-satin-p.1__5332956396__244837248
 
 [beecost.vn]
-match = -176.2%%
-title = Lịch sử giá Srm set chăn ga gối 5 món cotton living drap hàn ...
-url = https://beecost.vn/srm-set-chan-ga-goi-5-mon-cotton-living-drap-han-quoc-ga-phu-giuong-chan-bong-day-cao-cap-he-thong-n-p.1__9631034161__146302121
+match = -61.9%%
+title = Giảm giá Bộ chăn ga "nàng thơ' set 4 món
+url = https://beecost.vn/bo-chan-ga-nang-tho-set-4-mon-ai-la-nang-tho-vao-day-shop-ban-re-p.1__8162491061__894551
 
 [www.reef2reef.com]
 match = -61.9%%
