--- a/images/tham-ghe-nem/config.ini
+++ b/images/tham-ghe-nem/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-nem.html
 lastopen = 2024-06-07 00:34:34
 
 [search]
-lastsearch = 2024-07-29 02:19:45
+lastsearch = 2024-07-29 12:48:33
 
 [shopee.vn]
 match = -216.7%%
@@ -17,9 +17,9 @@ title = Đệm Lót Ghế Gỗ Mẫu 5
 url = https://goiaura.com/dem-trai-ghe-go-/dem-lot-ghe-go-mau-5
 
 [h5.lazada.vn]
-match = -175.0%%
-title = Thảm ghế gỗ nệm ghế gỗ 1m7 x 55cm mẫu màu nâu
-url = https://h5.lazada.vn/products/tham-ghe-go-nem-ghe-go-1m7-x-55cm-mau-mau-nau-i917390579.html
+match = -258.3%%
+title = Thảm ghế gỗ, nệm ghế, nệm sofa 2m x 55 cm màu đỏ có ...
+url = https://h5.lazada.vn/products/tham-ghe-go-nem-ghe-nem-sofa-2m-x-55-cm-mau-do-co-vien-i916236446.html
 
 [hakawa.vn]
 match = -175.0%%
@@ -43,8 +43,8 @@ url = https://thinhgo.com/products/ghe-nem-dua-cao-cap-4000-913
 
 [tiki.vn]
 match = -241.7%%
-title = Thảm ghế nệm ghế kích thước 2m2 x 55cm mẫu màu đỏ ...
-url = https://tiki.vn/tham-ghe-nem-ghe-kich-thuoc-2m2-x-55cm-mau-mau-do-moi-co-vien-p89638586.html
+title = Thảm ghế, nệm ghế gỗ kích thước 2m x 60cm các màu nâu
+url = https://tiki.vn/tham-ghe-nem-ghe-go-kich-thuoc-2m-x-60cm-cac-mau-nau-p89638136.html
 
 [suongtuyet.com]
 match = -133.3%%
@@ -57,9 +57,9 @@ title = BỘ GHẾ ĐƠN MODEL 01
 url = https://nemkimcuong.vn/vi/san-pham/bo-ghe-don-model-01/
 
 [www.lazada.vn]
-match = -300.0%%
-title = Nệm ghế , thảm ghế hoàng gia đỏ các kích thước từ 1m7 x ...
-url = https://www.lazada.vn/products/nem-ghe-tham-ghe-hoang-gia-do-cac-kich-thuoc-tu-1m7-x-55cm-i488602652.html
+match = -250.0%%
+title = Thảm ghế nệm ghế mẫu mới loại 1m6,5 x55cm ... - Lazada
+url = https://www.lazada.vn/products/tham-ghe-nem-ghe-mau-moi-loai-1m65-x55cm-cac-mau-do-vang-i1526583829.html
 
 [vn.my-best.com]
 match = -233.3%%
