--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-29 12:57:26
+lastsearch = 2024-07-29 13:18:18
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -72,9 +72,9 @@ title = Tuyệt chiêu chống rụng quả cho cây cam | VTC16
 url = https://www.youtube.com/watch?v=D5B7MtNy_kM
 
 [books.google.com]
-match = -225.0%%
-title = Revue française de l'étranger et des colonies et l'exploration
-url = https://books.google.com/books?id=rAPFtofl_pIC&pg=PA70-IA3&lpg=PA70-IA3&dq=chieu+lac+soc+16&source=bl&ots=-3WfjeGHGw&sig=ACfU3U0Ei2tGFT5U8PY6S99pGYCW_MRJDw&hl=en&sa=X&ved=2ahUKEwjdtdf8_MmHAxUy48kDHfnWCwMQ6AF6BAgiEAM
+match = -231.2%%
+title = CVCUL NCKT 1 và 2 Sử kí, E-xơ-ra, Nê-hê-mi và Ê-xê-tê - Kì 2
+url = https://books.google.com/books?id=aQDKEAAAQBAJ&pg=PT218&lpg=PT218&dq=chieu+lac+soc+16&source=bl&ots=ash3_j4VNX&sig=ACfU3U2ApNJ2e6AiaYg2O076jOHAsAqQhQ&hl=en&sa=X&ved=2ahUKEwjQ9f-dzcuHAxUwElkFHZL0KycQ6AF6BAgYEAM
 
 [dantocmiennui.vn]
 match = -125.0%%
