--- a/images/chieu-du-lichvt-22-3m/config.ini
+++ b/images/chieu-du-lichvt-22-3m/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-du-lichvt-22-3m.html
 lastopen = 2024-06-09 21:46:25
 
 [search]
-lastsearch = 2024-07-29 12:56:26
+lastsearch = 2024-07-29 13:51:37
 
 [vnexpress.net]
 match = -128.6%%
@@ -18,8 +18,8 @@ url = https://vielimousine.com/tin-tuc/ho-may-park-vung-tau.html
 
 [www.youtube.com]
 match = -114.3%%
-title = Khám Phá Con Đường "Tỷ Đô" Đẹp Nhất Thành Phố Vũng ...
-url = https://www.youtube.com/watch?v=NhZRPUFmsaw
+title = Du Lịch Vũng Tàu 2023: Cập nhật giá vé tham quan mới nhất
+url = https://www.youtube.com/watch?v=St3S4ilkoIY
 
 [liontrip.vn]
 match = -81.0%%
