--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-07-29 11:15:07
+lastsearch = 2024-07-29 13:46:10
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -175.0%%
-title = Lắc Xúc Xắc Quá Nhiều, Tôi Nâng Cấp Con Vịt Này QUÁ ...
-url = https://www.youtube.com/watch?v=_iGnRB4o7ng
+match = -237.5%%
+title = MBE vs CES (BO3) | GAM vs TF (BO3) | TW vs TS (BO3) | VCS ...
+url = https://www.youtube.com/watch?v=tXqDhoLY2SI
 
 [tuyensinh247.com]
 match = -218.8%%
