--- a/images/bo-ga-goi-chun-coco-18/config.ini
+++ b/images/bo-ga-goi-chun-coco-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-coco-18.html
 lastopen = 2024-06-09 23:53:28
 
 [search]
-lastsearch = 2024-07-29 11:51:22
+lastsearch = 2024-07-29 13:37:51
 
 [www.diepxuan.com]
 match = -72.7%%
@@ -49,7 +49,7 @@ url = https://www.sendo.vn/bo-ga-goi-chun.htm
 [demxanh.com]
 match = -40.9%%
 title = Chiếu cao su non Coco bo chun màu xám nhạt
-url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html?srsltid=AfmBOoqGK7h3Jz6x4vB34OdkqSzPhXhcv8P_KyL8yGhpwMkldQPDETQ1
+url = https://demxanh.com/chieu-cao-su-non-coco-bo-chun-mau-xam-nhat.html
 
 [www.tiktok.com]
 match = -127.3%%
