--- a/images/chieu-nhua-thai-binh-12/config.ini
+++ b/images/chieu-nhua-thai-binh-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-nhua-thai-binh-12.html
 lastopen = 2024-06-10 00:20:10
 
 [search]
-lastsearch = 2024-07-29 06:38:25
+lastsearch = 2024-07-29 13:51:58
 
 [shopee.vn]
 match = -65.2%%
@@ -39,7 +39,7 @@ url = https://thaibinhtv.vn/news/0/61643/san-xuat-theo-chieu-huong-hien-dai-quy-
 [www.lazada.vn]
 match = -17.4%%
 title = chiếu nhựa gấp gọn Thái Bình tiện dụng 1.6 m x 2 m
-url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html
+url = https://www.lazada.vn/products/chieu-nhua-gap-gon-thai-binh-tien-dung-16-m-x-2-m-i813788696.html?srsltid=AfmBOopWQbOzsE7O0tg0x5Xa6faHr0x04DtYxJpOKmX-y4_tHRVokD70
 
 [chuyenhangviet.com]
 match = -73.9%%
@@ -62,9 +62,9 @@ title = Chiếu Tre Việt Phổ Mến Thái Bình Cao Cấp - Chính Hãng ...
 url = https://demhong.vn/chieu-tre-viet-pho-men/
 
 [www.diepxuan.com]
-match = 21.7%%
-title = Chiếu nhựa Thái Bình 100x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-100x190.html
+match = 26.1%%
+title = Chiếu nhựa Thái Bình 120x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-120x190.html?srsltid=AfmBOoorXQFQ6B345scrUDffsAvlMSCICoD3TFU-bYv0ySj9lMqGUr7D
 
 [h5.lazada.vn]
 match = 34.8%%
