--- a/images/chieu-truc-cong-ty-16-19/config.ini
+++ b/images/chieu-truc-cong-ty-16-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-19.html
 lastopen = 2024-06-07 00:18:26
 
 [search]
-lastsearch = 2024-07-29 06:21:48
+lastsearch = 2024-07-29 13:49:13
 
 [chieutrelanlan.com]
 match = -37.5%%
@@ -32,19 +32,19 @@ title = Chiếu trúc 1m6 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
 url = https://shopee.vn/list/chiếu/trúc/1m6
 
 [chieutrucsaigon.com]
-match = 12.5%%
-title = NHÀ BÁN LẼ CHIẾU TRÚC HÀNG ĐẦU TPHCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/nha-ban-le-chieu-truc-hang-dau-tphcm-83.html
+match = 8.3%%
+title = MUA CHIẾU TRÚC CHÍNH HÃNG QUẬN TÂN BÌNH
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/mua-chieu-truc-quan-tan-binh-76.html
 
 [www.lazada.vn]
 match = -62.5%%
 title = chiếu tre 1,6*2m Trúc Linh hàng Việt Nam cao cấp siêu rẻ
-url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html
+url = https://www.lazada.vn/products/chieu-truc-chieu-tre-162m-truc-linh-hang-viet-nam-cao-cap-sieu-re-i270802405.html?srsltid=AfmBOorfkKx47EObdDMkfoYq-fjq68EognUl_Wg_r5rNUE66E4rs0pJn
 
 [demxanh.com]
 match = -54.2%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html
+url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOooTF7Te3bhtYWMaxxPisxbNtuXaF5ZNTzCforFz2kbewIqOyVFr
 
 [www.youtube.com]
 match = -75.0%%
