--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-07-29 11:18:37
+lastsearch = 2024-07-29 13:47:51
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -22,14 +22,14 @@ title = Workers' Compensation Appeals Board - Panel decisions
 url = https://www.dir.ca.gov/wcab/wcab-Decisions.htm
 
 [profiles.ucsf.edu]
-match = 10.5%%
-title = Courtney Lyles, PhD
-url = https://profiles.ucsf.edu/courtney.lyles
+match = -21.1%%
+title = Christina Mangurian, MD, MAS
+url = https://profiles.ucsf.edu/christina.mangurian
 
 [www.ncbi.nlm.nih.gov]
-match = -168.4%%
-title = Review of influenza-associated pulmonary aspergillosis in ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
+match = -142.1%%
+title = Exercise Recommendations for Cancer-Related Fatigue ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC3647480/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
