--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-29 11:38:09
+lastsearch = 2024-07-29 13:53:20
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -87,8 +87,8 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -150.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
+match = -85.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine
 url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [www.dir.ca.gov]
@@ -257,9 +257,9 @@ title = Climate Impact of Solar Variability
 url = https://ntrs.nasa.gov/api/citations/19910003143/downloads/19910003143.pdf
 
 [profiles.ucdavis.edu]
-match = 0.0%%
-title = Merrill E Gershwin
-url = https://profiles.ucdavis.edu/merrill.gershwin
+match = -38.5%%
+title = R Lor Randall
+url = https://profiles.ucdavis.edu/r.randall
 
 [store.samhsa.gov]
 match = -60.0%%
