CI images update

--- a/images/chieu-dieu-hoa-khong-goi-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-18.html
 lastopen = 2024-06-09 22:26:01
 
 [search]
-lastsearch = 2024-07-29 13:21:02
+lastsearch = 2024-07-29 13:53:07
 
 [demxanh.com]
 match = 0.0%%
@@ -125,4 +125,9 @@ url = https://danhchobeyeu.com/chieu-dieu-hoa-cao-su-non-vai-lua-nano-tencel-lat
 match = -3.7%%
 title = Chiếu điều hòa là gì? Có nên dùng chiếu điều hòa?
 url = https://happynest.vn/chuyen-nha/100072743/chieu-dieu-hoa-la-gi-co-nen-dung-chieu-dieu-hoa
+
+[sieuthidem.vn]
+match = 22.2%%
+title = Bộ chiếu điều hoà Tencel TC01 - Hà Nội
+url = https://sieuthidem.vn/san-pham/bo-chieu-dieu-hoa-tencel-tc01/
 
