--- a/images/ga-chun-dreamland-150x190-ct/config.ini
+++ b/images/ga-chun-dreamland-150x190-ct/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-chun-dreamland-150x190-ct.html
 lastopen = 2024-06-07 00:24:00
 
 [search]
-lastsearch = 2024-07-29 10:19:38
+lastsearch = 2024-07-29 13:51:41
 
 [www.diepxuan.com]
 match = 0.0%%
 title = Chiếu nhựa Thái Bình 90x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html?srsltid=AfmBOorKXCXowZHs6JlCr-BU09FNv0qWoWPUGNIQx-UOLZzW2r15Mn1M
+url = https://www.diepxuan.com/chieu-nhua-thai-binh-90x190.html
 
 [www.qcyc.ca]
 match = -53.6%%
@@ -74,7 +74,7 @@ url = https://www.instagram.com/p/C2lny5or_NA/
 [diepxuan.com]
 match = -21.1%%
 title = Điệp Xuân Trang Chủ
-url = https://diepxuan.com/?srsltid=AfmBOoqXn1nOzt8wHFcAxJFF2SjHqGoZfe4MOzJkAScDBSIA9A13nIMC
+url = https://diepxuan.com/
 
 [newenglandsnarrowroad.com]
 match = -350.0%%
