--- a/images/nem-di-a-mon-9f-2m-22-re/config.ini
+++ b/images/nem-di-a-mon-9f-2m-22-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-2m-22-re.html
 lastopen = 2024-06-10 00:56:34
 
 [search]
-lastsearch = 2024-07-29 11:34:00
+lastsearch = 2024-07-29 13:55:57
 
 [www.tiktok.com]
 match = 12.5%%
@@ -54,7 +54,7 @@ url = https://www.youtube.com/watch?v=hZRwijhMTH0
 [books.google.com]
 match = -116.7%%
 title = The Popular Encyclopedia; Or "Conversations Lexicon": Being ...
-url = https://books.google.com/books?id=c4Tqkb5ylrIC&pg=RA2-PA640-IA3&lpg=RA2-PA640-IA3&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=dnYyWzuCkv&sig=ACfU3U3s-V9BPWQZG7iJwwqgL2jEN1klVA&hl=en&sa=X&ved=2ahUKEwimlpT2tcuHAxUEF1kFHXbYGf8Q6AF6BAgcEAM
+url = https://books.google.com/books?id=c4Tqkb5ylrIC&pg=RA2-PA640-IA3&lpg=RA2-PA640-IA3&dq=nem+di+a+mon+9f+2m+22+re&source=bl&ots=dnYyWAtxlB&sig=ACfU3U2ap8wCBgauOhmjnHxoJ-uAfvJMfQ&hl=en&sa=X&ved=2ahUKEwi1porT1cuHAxUrkYkEHShhKBgQ6AF6BAgaEAM
 
 [www.kvaser.cn]
 match = 9.1%%
@@ -197,8 +197,8 @@ title = NEM | May was all vibes and smiles
 url = https://www.instagram.com/nemsongs/p/C8n36jgRTi1/?locale=en_CA
 
 [erdc-library.erdc.dren.mil]
-match = -108.3%%
-title = CRREL Report 82-34, Hydraulic Model Study of Port Huron Ice ...
+match = -95.8%%
+title = CRREL Report 82-34, Hydraulic Model Study of Port Huron ...
 url = https://erdc-library.erdc.dren.mil/jspui/bitstream/11681/9331/1/CR-82-34.pdf
 
 [support.rockstargames.com]
