--- a/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
+++ b/images/bo-chan-ga-gam-pyeoda-skysilk/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda-skysilk.html
 lastopen = 2024-06-10 01:22:44
 
 [search]
-lastsearch = 2024-07-29 13:17:56
+lastsearch = 2024-07-29 13:49:19
 
 [demxanh.com]
 match = 13.8%%
 title = Chăn ga gối Singapore Pyeoda Luxury 5 món
-url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-luxury-5-mon.html?srsltid=AfmBOopxZj1oJiYEfYgCsnnDMvywPmpDh3OT3mH_jJG1EoK0lWPKQVRt
 
 [www.khodemthanhdo.com]
 match = 52.4%%
@@ -32,9 +32,9 @@ title = Bộ chăn ga vỏ gối lụa 5 món Skysilk hàng Pyeoda cao cấp ...
 url = https://shopee.vn/Bộ-chăn-ga-vỏ-gối-lụa-5-món-Skysilk-hàng-Pyeoda-cao-cấp-có-túi-đựng-i.60303676.20559202272
 
 [thegioidemonline.com]
-match = 27.6%%
-title = Bộ chăn ga gối Hanvico LIVING - LV62
-url = https://thegioidemonline.com/bo-chan-ga-goi-hanvico-living-lv62.html
+match = 34.5%%
+title = Bộ chăn ga gối Pyeoda LCHARME GẤM 7 món
+url = https://thegioidemonline.com/bo-chan-ga-goi-pyeoda-lcharme-gam-7-mon.html?srsltid=AfmBOopCNK_lUYyoc-1bDtseWEdoitfO4nHe2WLvJ8dngH290x2J-N2B
 
 [dem4mua.vn]
 match = 6.9%%
@@ -44,7 +44,7 @@ url = https://dem4mua.vn/san-pham/bo-ga-lua-phu-skysilk-pyeoda/
 [www.diepxuan.com]
 match = 62.1%%
 title = Bộ chăn ga gấm Pyeoda - Điệp Xuân
-url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html
+url = https://www.diepxuan.com/bo-chan-ga-gam-pyeoda.html?srsltid=AfmBOoqADljcp6g2Vl5RD4aeaT7ZEgZ1cbVCej7VFEwtYBMjjctgMVlS
 
 [www.facebook.com]
 match = -27.8%%
