--- a/images/chieu-cay-cao-bang-a-12/config.ini
+++ b/images/chieu-cay-cao-bang-a-12/config.ini
@@ -17,9 +17,9 @@ title = Chiếu Trúc Cao Bằng Tây Bắc giá rẻ
 url = https://demxanh.com/chieu-truc-cao-bang-tay-bac.html
 
 [chieutrucsaigon.com]
-match = -13.0%%
-title = Chiếu trúc thanh cao bằng 1m4 loại 1 chất lượng
-url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m4x2m.html
+match = 43.5%%
+title = CHIẾU TRÚC THANH CAO BẰNG 1M6X2M
+url = https://chieutrucsaigon.com/chieu-truc-thanh-cao-bang-1m6x2m.html
 
 [shopee.vn]
 match = 17.4%%
