--- a/images/chieu-cay-dai-loan-vien-da18/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da18.html
 lastopen = 2024-06-09 21:45:17
 
 [search]
-lastsearch = 2024-07-29 02:12:13
+lastsearch = 2024-07-29 13:57:22
 
 [www.diepxuan.com]
 match = 35.7%%
@@ -27,9 +27,9 @@ title = Tượng nữ thần bằng đá 18 - Đá mỹ nghệ Ninh Bình
 url = https://ninhbinhstone.com/tuo-ng-nu-tha-n-ba-ng-da-18
 
 [www.facebook.com]
-match = -53.8%%
-title = Erica Năm Căn
-url = https://www.facebook.com/profile.php?id=61550060091014&locale=fa_IR
+match = -9.1%%
+title = 60 PHÚT COMBO FULLFACE
+url = https://www.facebook.com/PKCKDL.VTMQTHOAKY/photos/60-phút-combo-fullface-định-hình-và-căn-chỉnh-khung-mặt-tự-nhiên-không-phẫu-thuậ/458346137051558/
 
 [nhua66a.com]
 match = -17.9%%
@@ -77,9 +77,9 @@ title = nhà cung cấp dây đồ da
 url = https://trangvangvietnam.com/tagclass/20141160/nha-cung-cap-day-do-da.html
 
 [www.youtube.com]
-match = -42.9%%
-title = SH.6000. Cây Si Đài Loan hàng bonsai đẹp quốc tế đây các ...
-url = https://www.youtube.com/watch?v=4SQA_sviv14
+match = -53.6%%
+title = Cây Dâu trái dài Đài Loan trồng chơi cũng đủ trái ăn | Nhà ...
+url = https://www.youtube.com/watch?v=Vz6KrfVTWWQ
 
 [divui.com]
 match = -60.7%%
