--- a/images/chieu-truc-cong-ty-14/config.ini
+++ b/images/chieu-truc-cong-ty-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-14.html
 lastopen = 2024-06-09 23:39:55
 
 [search]
-lastsearch = 2024-07-29 05:29:52
+lastsearch = 2024-07-29 13:48:19
 
 [chieutrucsaigon.com]
 match = 0.0%%
@@ -19,7 +19,7 @@ url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-khong-vien-mau-trang-16
 [nemsaithanh.com]
 match = -10.0%%
 title = Chiếu Trúc
-url = https://nemsaithanh.com/san-pham/chieu-truc-135.html
+url = https://nemsaithanh.com/chieu-truc-103.html
 
 [trangvangvietnam.com]
 match = -61.9%%
@@ -62,9 +62,9 @@ title = Chiếu Trúc Các Loại
 url = https://www.nemsaithanh.com/chieu-truc-cac-loai/
 
 [shopee.vn]
-match = -23.8%%
-title = Chiếu trúc 140cm đến 180cm hạt nâu có viền
-url = https://shopee.vn/Chiếu-trúc-140cm-đến-180cm-hạt-nâu-có-viền-i.231274383.5918690674
+match = -109.5%%
+title = chiếu tre 1,4*1,9m hạt nâu không viền hàng Việt Nam siêu rẻ
+url = https://shopee.vn/Chiếu-trúc-chiếu-tre-1-4*1-9m-hạt-nâu-không-viền-hàng-Việt-Nam-siêu-rẻ-i.15000357.2176483881
 
 [www.lazada.vn]
 match = -66.7%%
