--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-07-29 12:49:59
+lastsearch = 2024-07-29 13:48:40
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = -153.3%%
+title = Where We Fly | Flights with TUI 2024 / ...
+url = https://www.tui.co.uk/flight/where-we-fly
 
 [cruisepanda.com]
 match = -213.3%%
