--- a/images/bo-ga-goi-chun-xoa-2m-22/config.ini
+++ b/images/bo-ga-goi-chun-xoa-2m-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-2m-22.html
 lastopen = 2024-06-09 22:43:18
 
 [search]
-lastsearch = 2024-07-29 12:14:24
+lastsearch = 2024-07-29 14:16:07
 
 [www.diepxuan.com]
 match = -62.5%%
@@ -27,9 +27,9 @@ title = Bộ ga chun LIVING - LV22
 url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv22/
 
 [www.everonvn.vn]
-match = -33.3%%
-title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22004
-url = https://www.everonvn.vn/chi-tiet/everon-esm22004.html
+match = 12.5%%
+title = Everon 2022 - Bộ chăn ga gối
+url = https://www.everonvn.vn/bo-suu-tap/everon-2022.html
 
 [songhongchinhhang.vn]
 match = 0.0%%
@@ -79,7 +79,7 @@ url = https://everonletrongtan.com/bo-suu-tap-everon-2022
 [jysk.vn]
 match = 0.0%%
 title = Phụ kiện chăn ga gối - JYSK.vn
-url = https://jysk.vn/phu-kien-chan-ga-goi?srsltid=AfmBOor8yoAesVFucz4rvgmBA1mUZoyNdgQ8ZfIwYah-hUMvNWYBfHho
+url = https://jysk.vn/phu-kien-chan-ga-goi
 
 [www.facebook.com]
 match = 15.8%%
