--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-07-28 22:19:53
+lastsearch = 2024-07-29 14:17:49
 
 [www.diepxuan.com]
 match = 3.6%%
 title = Chăn ga gối màu - Chăn ga gối đệm Điệp Xuân
-url = https://www.diepxuan.com/chan-ga-goi-mau.html
+url = https://www.diepxuan.com/chan-ga-goi-mau.html?srsltid=AfmBOorjFh6xy6KegBnKuVEIBS-XBxqHN430rNg8XNcKXHY1rrrUsv-E
 
 [shop.chanrathanhthuy.com]
 match = 10.7%%
 title = Bộ Ga Bọc Cotton Thêu Chân Màu Nâu Đất (12)
-url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat
+url = https://shop.chanrathanhthuy.com/products/bo-ga-boc-theu-chan-mau-nau-dat?srsltid=AfmBOoqOcnIA4nfAOdmHsTCA-s3DvTbgqeBMf2dfz5O3TvglRut8UzBd
 
 [shopee.vn]
 match = -7.1%%
@@ -24,7 +24,7 @@ url = https://shopee.vn/❤️Bộ-chăn-ga-gối❤️-cotton-poly-mẫu-Thỏ-
 [foreverbedding.net]
 match = -32.1%%
 title = Top 20+ Bộ Chăn Ga Gối Đệm Cotton Đáng Mua Nhất Hiện Nay
-url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
+url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton?srsltid=AfmBOor_ZHpnV4XKGbKY_aPiImxi_Stryi13yWz3HLruyT3yOQFz6I46
 
 [changagoidemsonghong.com]
 match = 17.9%%
