--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-07-29 13:55:12
+lastsearch = 2024-07-29 14:15:25
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -37,9 +37,9 @@ title = Mền Tuyết NIN - Liac Snow
 url = https://ninhouse.vn/products/men-tuyet-nin-liac-snow
 
 [www.youtube.com]
-match = -40.7%%
-title = LIVESTREAM 204: PHÁP THOẠI TRỰC TUYẾN - Guruji ...
-url = https://www.youtube.com/watch?v=dwJNhwX621s
+match = -66.7%%
+title = chăn tuyết thái lan giá rẻ - Chăn lông tuyết - Shop Sắc Mai ...
+url = https://www.youtube.com/watch?v=XHN7YU5NYi4
 
 [baodaknong.vn]
 match = -7.4%%
