--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-07-29 12:53:05
+lastsearch = 2024-07-29 14:16:28
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -14,7 +14,7 @@ url = https://batdongsan.com.vn/ban-can-ho-chung-cu-chung-cu-d2-giang-vo
 [vinatools.com]
 match = -173.3%%
 title = Kéo cắt tôn dày 1.0mm BESSEY D208, lưỡi cong ...
-url = https://vinatools.com/keo-cat-ton-d208/?srsltid=AfmBOopg7rFwZ-PHf1xDKvZbtbm4ltP35NmnEEEnOcgWjJSTOhh0jDRm
+url = https://vinatools.com/keo-cat-ton-d208/
 
 [shopvnb.com]
 match = -166.7%%
@@ -153,8 +153,8 @@ url = https://u.gg/lol/profile/vn2/dariusmaster-vn2/overview
 
 [shopee.vn]
 match = -100.0%%
-title = aDz giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=aDz
+title = adz giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=.adz
 
 [www.vietnamairport.vn]
 match = -213.3%%
