--- a/images/chieu-truc-que-lam-loai-2-10/config.ini
+++ b/images/chieu-truc-que-lam-loai-2-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-2-10.html
 lastopen = 2024-06-07 00:19:30
 
 [search]
-lastsearch = 2024-07-29 12:58:50
+lastsearch = 2024-07-29 14:19:28
 
 [thegioidemviet.vn]
 match = 35.7%%
@@ -29,7 +29,7 @@ url = https://shopee.vn/Chiếu-trúc-Quế-Lâm-hàng-chuẩn-loại-1-i.205510
 [demxanh.com]
 match = -25.0%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOorc3yDSlvQS4sFkwrH8Wv81q_j8gZvirnZLTNola2AnZFemucba
+url = https://demxanh.com/chieu-truc.html
 
 [tiki.vn]
 match = -39.3%%
