--- a/images/nem-lo-xo-techwood-16/config.ini
+++ b/images/nem-lo-xo-techwood-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-techwood-16.html
 lastopen = 2024-06-10 01:29:52
 
 [search]
-lastsearch = 2024-07-29 13:47:11
+lastsearch = 2024-07-29 14:18:48
 
 [sieuthidemonline.vn]
 match = -19.0%%
@@ -24,12 +24,12 @@ url = https://chuyenhangviet.com/dem-lo-xo-techwood/
 [demxanh.com]
 match = -95.2%%
 title = Bảng giá đệm lò xo Tuấn Anh khuyến mãi mới nhất năm ...
-url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html?srsltid=AfmBOorBf8hfAnBsv3U1GK3AYbMlvKKFosmUOGCZ1SwBPR-16WytcdBv
+url = https://demxanh.com/bang-gia-dem-lo-xo-tuan-anh-nam-2018.html
 
 [www.diepxuan.com]
 match = 4.8%%
 title = Nệm lò xo TechWood 160x200x23 - Điệp Xuân
-url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html?srsltid=AfmBOooOBR5V6meRBxr3mDo936HfDi68C_KwPmYjvgrmDB_0NbvVzU3s
+url = https://www.diepxuan.com/nem-lo-xo-techwood-160x200x23.html
 
 [shopee.vn]
 match = -61.9%%
