--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-07-29 13:53:20
+lastsearch = 2024-07-29 14:13:04
 
 [fsapartners.ed.gov]
 match = -45.0%%
-title = 2023-2024 Federal School Code List
-url = https://fsapartners.ed.gov/sites/default/files/2022-11/2324FedSchoolCodeList.pdf
+title = 2022-2023 Federal School Code List
+url = https://fsapartners.ed.gov/sites/default/files/2022-05/2223FedSchoolCodeList.xlsx
 
 [finaid.org]
 match = 0.0%%
@@ -22,8 +22,8 @@ title = App by School
 url = https://studentaid.gov/sites/default/files/fsawg/datacenter/library/2021-2022-app-data-by-school-q6.xls
 
 [medboard.nv.gov]
-match = -110.0%%
-title = Disciplinary Actions - Board of Medical Examiners
+match = -90.0%%
+title = Disciplinary Actions - Medical Examiners Board
 url = https://medboard.nv.gov/Patients/Disciplinary/DisciplinaryActions/
 
 [www.uclahealth.org]
@@ -87,8 +87,8 @@ title = Electrical Transport Mechanisms of ITO/a-Si:H Schottky Diode
 url = https://uwaterloo.ca/giga-to-nanoelectronics-centre/sites/default/files/uploads/documents/annual_report_2002-2005.pdf
 
 [som.cuanschutz.edu]
-match = -85.0%%
-title = D. Ross Camidge, MD, PhD - School of Medicine
+match = -150.0%%
+title = D. Ross Camidge, MD, PhD - School of Medicine - CU Anschutz
 url = https://som.cuanschutz.edu/Profiles/Faculty/Profile/18871
 
 [www.dir.ca.gov]
