--- a/images/chieu-dieu-hoa-co-goi-15/config.ini
+++ b/images/chieu-dieu-hoa-co-goi-15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-co-goi-15.html
 lastopen = 2024-06-06 16:54:53
 
 [search]
-lastsearch = 2024-07-29 12:36:25
+lastsearch = 2024-07-29 14:56:14
 
 [shopee.vn]
-match = -70.8%%
-title = Chiếu điều hòa cao su non bo chun Tencel mát lạnh thấm mồ ...
-url = https://shopee.vn/Chiếu-điều-hòa-cao-su-non-bo-chun-Tencel-mát-lạnh-thấm-mồ-hôi-nhập-khẩu-cao-cấp-Otama-Bedding-đủ-size-i.1155203015.25460387852
+match = -37.5%%
+title = Chiếu mây điều hòa Lidaco loại dày cực mát cho ngày hè
+url = https://shopee.vn/Chiếu-mây-điều-hòa-Lidaco-loại-dày-cực-mát-cho-ngày-hè-i.352833469.4282665950
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -47,9 +47,9 @@ title = CHIẾU ĐIỀU HÒA CAO SU NON COCO ĐẶC BIỆT 2024
 url = https://cungnhaulamgiau.vn/chieu-dieu-hoa-cao-su-non-coco-dac-biet-2024_p6524
 
 [tiki.vn]
-match = -50.0%%
-title = chiếu điều hòa latex 8D cực mát có bo chun bọc đệm 15- ...
-url = https://tiki.vn/chieu-dieu-hoa-latex-8d-cuc-mat-co-bo-chun-boc-dem-15-25cm-tang-kem-2-vo-goi-cung-mau-p253286233.html
+match = 16.7%%
+title = Chiếu điều hòa có mát không? Review 10 ...
+url = https://tiki.vn/blog/chieu-dieu-hoa/
 
 [xn--nekiovitnam-y69e.vn]
 match = -20.8%%
