--- a/images/tham-ni-xop-hinh-60/config.ini
+++ b/images/tham-ni-xop-hinh-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-hinh-60.html
 lastopen = 2024-06-07 00:35:14
 
 [search]
-lastsearch = 2024-07-29 11:56:35
+lastsearch = 2024-07-29 14:51:53
 
 [xoptraisan.info]
 match = -147.4%%
@@ -27,9 +27,9 @@ title = Thảm xốp – THAMHT.VN
 url = https://thamht.vn/collections/tham-xop
 
 [shopee.vn]
-match = -94.7%%
-title = thảm ghép 60x60cm giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=thảm ghép 60x60cm
+match = -73.7%%
+title = thảm xốp ghép giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=thảm xốp ghép
 
 [thamtretho.com]
 match = 37.5%%
