CI images update

--- a/images/bo-bon-mua-chun-chan-182m/config.ini
+++ b/images/bo-bon-mua-chun-chan-182m/config.ini
@@ -17,9 +17,9 @@ title = Bộ chăn bốn mùa Dòng Thời Gian - EPT24081 - Everon
 url = https://everonchinhhang.vn/products/bo-chan-bon-mua-dong-thoi-gian-ept24081
 
 [everonvn.com.vn]
-match = 28.0%%
-title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
+match = -8.0%%
+title = Chăn bốn mùa Everon Es-1802 giảm giá 40%%
+url = https://everonvn.com.vn/everon/2393/chan-bon-mua-es-1802
 
 [www.changagoidemeveron.vn]
 match = -8.0%%
@@ -62,9 +62,9 @@ title = Mua Bán Căn Hộ Chung Cư Ciputra Hà Nội
 url = https://bdshanoi.com.vn/ban-can-ho-ciputra.html
 
 [tiki.vn]
-match = -40.0%%
-title = Bộ GA CHUN CHẦN bốn mùa ESM21011 160*200, 180* ...
-url = https://tiki.vn/bo-ga-chun-chan-bon-mua-esm21011-160-200-180-200-200-220-p180961652.html?spid=180961652
+match = -36.0%%
+title = Bộ GA CHUN CHẦN bốn mùa ESM21011 160*200, 180 ...
+url = https://tiki.vn/bo-ga-chun-chan-bon-mua-esm21011-160-200-180-200-200-220-p139698447.html
 
 [www.canhociputra.com]
 match = -24.0%%
