--- a/images/chieu-truc-den-12/config.ini
+++ b/images/chieu-truc-den-12/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-truc-den-12.html
 lastopen = 2024-06-07 00:20:09
 
 [search]
-lastsearch = 2024-07-29 11:46:28
+lastsearch = 2024-07-29 15:34:18
 
 [demxanh.com]
-match = -94.1%%
-title = Mua chiếu trúc, đến ngay Đệm Xanh - Tổng hợp ...
-url = https://demxanh.com/mua-chieu-truc-den-ngay-dem-xanh-tong-hop-chieu-sieu-mat-2022.html
+match = -17.6%%
+title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
+url = https://demxanh.com/chieu-truc-den.html
 
 [chieutrelanlan.com]
-match = -58.8%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -94.1%%
+title = Chiếu trúc mắt nhỏ có viền màu đen 180x200cm (1m8)
+url = https://chieutrelanlan.com/chieu-truc-mat-nho-loai-co-vien-mau-den-180x200cm-32.html
 
 [thegioidemtot.vn]
 match = -58.8%%
@@ -37,9 +37,9 @@ title = Chiếu trúc hạt đen cao cấp, bền , đẹp, Hàng Loại I
 url = https://shopee.vn/Chiếu-trúc-hạt-đen-cao-cấp-bền-đẹp-Hàng-Loại-I-i.296736591.9319890080
 
 [vongxepsaigon.vn]
-match = -188.2%%
-title = Chiếu trúc chiếu tre hạt nâu đen hàng tốt loại 1 - Kích thước ...
-url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-hat-nau-den-hang-tot-loai-1-kich-thuoc-120cm/
+match = -117.6%%
+title = Chiếu trúc chiếu tre 1m2 hạt nâu đen hàng tốt loại 1
+url = https://vongxepsaigon.vn/san-pham/chieu-truc-chieu-tre-1m2-hat-nau-den-hang-tot-loai-1/
 
 [www.diepxuan.com]
 match = -64.7%%
@@ -90,4 +90,9 @@ url = https://www.nemsaithanh.com/san-pham/chieu-truc-135.html
 match = -158.8%%
 title = Chiếu Trúc Hương Trúc - Chiếu nằm mùa hè cao cấp - Kho đệm
 url = https://khodem.vn/chieu-truc-huong-truc/
+
+[chieu.com.vn]
+match = -5.9%%
+title = Chiếu Trúc hạt đen cực đẹp cực rẻ
+url = https://chieu.com.vn/san-pham/chieu-truc-hat-den-cuc-dep-cuc-re-2/
 
