--- a/images/nem-foam-dreamland-uc-160x200x20/config.ini
+++ b/images/nem-foam-dreamland-uc-160x200x20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-foam-dreamland-uc-160x200x20.html
 lastopen = 2024-06-07 00:23:34
 
 [search]
-lastsearch = 2024-07-29 14:55:37
+lastsearch = 2024-07-29 15:45:49
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -22,9 +22,9 @@ title = Đệm Memory Foam Massage Kawaii Dreamland
 url = https://shopee.vn/Đệm-Memory-Foam-Massage-Kawaii-Dreamland-Nệm-Công-Thái-Học-Công-Nghệ-Japan-i.1090783225.24251489307
 
 [demxanh.com]
-match = -40.6%%
-title = Đệm cao su Dunlopillo Latex World Pure giá rẻ nhất Hà Nội
-url = https://demxanh.com/dem-cao-su-dunlopillo-latex-world-pure.html?srsltid=AfmBOooFB4q2B3TR-xJe0WRvcmBRH_YpEvfwItoiSZuYBKna5ManY59S
+match = -6.2%%
+title = Đệm bông ép Dreamland giá rẻ, chính hãng tại Hà Nội
+url = https://demxanh.com/dem-bong-ep-dreamland.html
 
 [www.youtube.com]
 match = -43.8%%
