--- a/images/tam-trang-tri-ks-uc/config.ini
+++ b/images/tam-trang-tri-ks-uc/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tam-trang-tri-ks-uc.html
 lastopen = 2024-06-10 00:08:10
 
 [search]
-lastsearch = 2024-07-29 14:44:16
+lastsearch = 2024-07-29 15:50:36
 
 [demxanh.com]
 match = -84.2%%
@@ -17,8 +17,8 @@ title = Tấm Trang Trí Khách Sạn cao cấp giá tốt nhất Hà Nội
 url = https://thegioidemviet.vn/tam-trang-tri-khach-san/
 
 [vinhtuong.com]
-match = -42.1%%
-title = Tấm trang trí Vĩnh Tường DECO Plus® In Lụa
+match = -110.5%%
+title = Tấm thạch cao, Tấm xi măng trang trí Vĩnh Tường DECO Plus
 url = https://vinhtuong.com/tam-trang-tri-vinh-tuong-deco-plus
 
 [www.vietuchotel.vn]
@@ -42,9 +42,9 @@ title = Hoi An Memories Resort & Spa
 url = https://hoianmemoriesresort.com/
 
 [www.tripadvisor.com.vn]
-match = -73.7%%
-title = 10 Khách sạn tốt nhất tại Úc - Tripadvisor
-url = https://www.tripadvisor.com.vn/Hotels-g255055-Australia-Hotels.html
+match = -63.2%%
+title = 10 Khách sạn giá rẻ tại Úc - Tripadvisor
+url = https://www.tripadvisor.com.vn/HotelsList-Australia-Cheap-Hotels-zfp12992448.html
 
 [3rvietnam.com.vn]
 match = 0.0%%
@@ -107,8 +107,8 @@ title = Torrens University: du học Úc chi phí hợp lý ngành Du lịch ...
 url = https://dreamworld.edu.vn/torrens-university-du-hoc-uc-chi-phi-hop-ly-nganh-du-lich-khach-san-thiet-ke-mba-n2424.html
 
 [khanspacaocap.com]
-match = -105.3%%
-title = [Bật Mí] 5+ Kiểu Gấp KHĂN TẮM Trang Trí Phòng Khách ...
+match = -121.1%%
+title = [Bật Mí] 5+ Kiểu Gấp KHĂN TẮM Trang Trí Phòng Khách Sạn ...
 url = https://khanspacaocap.com/gap-khan-tam-trang-tri-phong-khach-san/
 
 [a-emhotels.com]
@@ -292,8 +292,8 @@ title = Department of Public Health Child ... - County of Los Angeles
 url = http://publichealth.lacounty.gov/cms/docs/CHDPAssessorDirectory.pdf
 
 [www.renaissanceriversidesaigon.com]
-match = -26.3%%
-title = Khách sạn 5 sao đẳng cấp Quốc tế
+match = -168.4%%
+title = Renaissance Riverside Hotel Saigon - Khách sạn 5 sao đẳng ...
 url = https://www.renaissanceriversidesaigon.com/
 
 [vetaffairs.sd.gov]
