--- a/images/tui-singapore15/config.ini
+++ b/images/tui-singapore15/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-singapore15.html
 lastopen = 2024-06-10 00:27:49
 
 [search]
-lastsearch = 2024-07-29 15:34:58
+lastsearch = 2024-07-29 16:45:56
 
 [www.tui.co.uk]
-match = -133.3%%
-title = Last Minute Cruise Deals | Marella Cruises
-url = https://www.tui.co.uk/cruise/deals/last-minute-cruises
+match = -160.0%%
+title = Marella Cruises | Cruise Holidays 2024 / 2025
+url = https://www.tui.co.uk/cruise/
 
 [www.travelgossip.co.uk]
 match = 0.0%%
@@ -17,8 +17,8 @@ title =
 url = https://www.travelgossip.co.uk/latestnews/marella-cruises-cancels-winter-2024-25-asia-and-middle-east-programme/
 
 [www.flightaware.com]
-match = -60.0%%
-title = Live TUI Airways Flight Status
+match = -140.0%%
+title = Estado de vuelos de TUI Airways en tiempo real
 url = https://www.flightaware.com/live/fleet/TOM
 
 [www.cruisetimetables.com]
@@ -187,8 +187,8 @@ title = TUI Cruises - Voordelige cruisereizen boeken
 url = https://www.cruisewinkel.nl/rederijen/tui-cruises/r-178.html
 
 [www.radleylondon.com]
-match = -206.7%%
-title = Radley London: Designer Leather Handbags, Purses & ...
+match = -193.3%%
+title = Radley London: Designer Leather Handbags, Purses ...
 url = https://www.radleylondon.com/
 
 [in.trip.com]
