--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-07-29 10:25:10
+lastsearch = 2024-07-29 16:47:16
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -223.1%%
+title = Hoi Chan (@hoichandraws) • Instagram photos and videos
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [hk.linkedin.com]
 match = -215.4%%
@@ -72,8 +72,8 @@ title = 16 Josephine Lau Stock Photos and High-res Pictures
 url = https://www.gettyimages.co.uk/photos/josephine-lau
 
 [hoahoctro.tienphong.vn]
-match = -284.6%%
-title = Khoảnh khắc Châu Bùi lọt giữa "hội chân dài" Thảo Nhi Lê, ...
+match = -300.0%%
+title = Khoảnh khắc Châu Bùi lọt giữa "hội chân dài" Thảo Nhi Lê, H ...
 url = https://hoahoctro.tienphong.vn/khoanh-khac-chau-bui-lot-giua-hoi-chan-dai-thao-nhi-le-hhen-nie-tai-su-kien-thoi-trang-post1484283.tpo
 
 [haithienplaza.com]
@@ -302,8 +302,8 @@ title = Hoi Yi Chan's Reviews on Carousell Hong Kong
 url = https://www.carousell.sg/u/justforu.shop/reviews/
 
 [www.bbc.com]
-match = -230.8%%
-title = South Korea: First lady's Dior bag shakes ... - BBC
+match = -261.5%%
+title = South Korea: First lady's Dior bag shakes country's ...
 url = https://www.bbc.com/news/world-asia-68090638
 
 [www.straitstimes.com]
