--- a/images/chieu-cay-ht-tre-em/config.ini
+++ b/images/chieu-cay-ht-tre-em/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-ht-tre-em.html
 lastopen = 2024-06-06 16:42:52
 
 [search]
-lastsearch = 2024-07-29 16:29:07
+lastsearch = 2024-07-29 16:57:32
 
 [shopee.vn]
 match = -36.8%%
@@ -27,9 +27,9 @@ title = Chiếu trúc hạt nhỏ có viền màu nâu đen Size: 1m6x1m9
 url = https://chieutrelinhchi.com/chieu-truc-1m6/chieu-truc-hat-nho-co-vien-mau-nau-1m6-88.html
 
 [www.youtube.com]
-match = -152.6%%
-title = Mẹ Ơi Có Biết - Bé Khánh Vy | Nhạc Thiếu Nhi Hay Nhất, Mẹ ...
-url = https://www.youtube.com/watch?v=4dXj1h8bQHs
+match = -142.1%%
+title = Bé Khỏe Bé Ngoan ♫ Mai Vy - Thần Đồng Âm Nhạc Việt Nam ...
+url = https://www.youtube.com/watch?v=rSwTEpTTNY8
 
 [dochoihoangthu.com]
 match = -121.1%%
@@ -112,9 +112,9 @@ title = Chiếu Trúc Tăm H&T - Công ty TNHH Sản xuất và thương mại .
 url = https://huongtruc.com/chi-tiet/chieu-ht
 
 [chieutruc.info]
-match = -68.4%%
-title = Chiếu Tăm H&T - Chiếu Thanh Hương Trúc cao cấp
-url = https://chieutruc.info/chieu-tam-ht/
+match = -115.8%%
+title = Giá chiếu trúc tre Việt Nam năm 2024 - Chieutruc.inFo
+url = https://chieutruc.info/gia-chieu-truc-tre-viet-nam-2024/
 
 [shoptretho.com.vn]
 match = -126.3%%
