--- a/images/chieu-lac-soc-16/config.ini
+++ b/images/chieu-lac-soc-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-16.html
 lastopen = 2024-06-09 23:48:14
 
 [search]
-lastsearch = 2024-07-29 15:55:44
+lastsearch = 2024-07-29 16:44:36
 
 [www.pnj.com.vn]
 match = -56.2%%
@@ -12,9 +12,9 @@ title = Hướng dẫn đo size lắc và vòng tay
 url = https://www.pnj.com.vn/blog/huong-dan-do-size-lac-va-vong-tay/
 
 [baomoi.com]
-match = -168.8%%
-title = Nóp cỏ bàng và chiếu lác - Tạp chí Văn Hóa & Phát Triển
-url = https://baomoi.com/nop-co-bang-va-chieu-lac-c40335029.epi
+match = -62.5%%
+title = 'Độc chiêu' của gã giám đốc mê cờ bạc
+url = https://baomoi.com/doc-chieu-cua-ga-giam-doc-me-co-bac-c49759121.epi
 
 [www.thegioididong.com]
 match = -231.2%%
