--- a/images/ruot-goi-ke-korea/config.ini
+++ b/images/ruot-goi-ke-korea/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-korea.html
 lastopen = 2024-06-10 00:58:26
 
 [search]
-lastsearch = 2024-07-29 14:15:04
+lastsearch = 2024-07-29 16:45:16
 
 [www.diepxuan.com]
 match = 5.9%%
@@ -27,9 +27,9 @@ title = ruột gối hơi hiệu KOREA
 url = https://shopee.vn/ruột-gối-hơi-hiệu-KOREA-i.43470238.725470536
 
 [demxanh.com]
-match = -205.9%%
-title = Back to School 2023| Trợ giá cực cool cho học sinh, sinh viên
-url = https://demxanh.com/back-to-school-2023-tro-gia-cuc-cool.html
+match = -100.0%%
+title = Ruột gối chính hãng giá khuyến mãi rẻ nhất Hà Nội
+url = https://demxanh.com/ruot-goi.html
 
 [everonkorea.com]
 match = -100.0%%
@@ -42,9 +42,9 @@ title = Ruột gối - Drap giường, chăn ga gối thảm Hàn Quốc
 url = https://drapgiuonghanquoc.com/danh-muc-san-pham/ruot-chan-ruot-goi/ruot-goi/
 
 [sieuthidemonline.vn]
-match = -158.8%%
-title = Ruột gối 50x70 bông tinh khiết siêu nhẹ cao cấp chính hãng
-url = https://sieuthidemonline.vn/ruot-goi-50x70/
+match = -135.3%%
+title = Ruột gối đơn siêu nhẹ Sông Hồng Collection chính hãng!
+url = https://sieuthidemonline.vn/ruot-goi-don-song-hong/
 
 [www.lazada.vn]
 match = -147.1%%
